--- a/public/ARG.html
+++ b/public/ARG.html
@@ -133,11 +133,11 @@
     <h1>ARG</h1>
     <div id='plotly2'></div>
     <script>
-        var data = [{
+        var stats = [{
         x: [1960, 1961, 1962,1963,1964,1965,1966,1967,1968,1969,1970,1971,1972,1973,1974,1975,1976,1977,1978,1980,1981,1982,1983,1984,1985,1986,1987,1988,1989,1990,1991,1992,1993,1994,1995,1996,1997,1998,1999,2000,2001,2002,2003,2004,2005,2006,2007,2008,2009,2010,2011,2012,2013,2014,2015,2016,2017,2018,2019,2020],
-        y: [, , ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,],
+        y: [, , ,,,,10.5,12.5,14.1,13.9,13.3,,,,,,,9.9,10.4,9.3,,,9.9,9.1,9,9.7,10.8,10.7,10.4,9.9,9.3,8.2,9,9.3,8.7,8.4,8.4,8.1,8.4,8.4,9.4,10.3,10.1,10.3,9.4,9.1,8.9,8.3,8.5,7.9,7.9,7.6,8.4,7.6,8.1,7.9,7.6,7.8,8,7.8,],
         type: 'scatter'}];
-        Plotly.newPlot('plotly2', data);
+        Plotly.newPlot('plotly2', stats);
     </script>
   </header>
   <section id="country-stats">
@@ -149,65 +149,65 @@
     <li>1963: </li>
     <li>1964: </li>
     <li>1965: </li>
-    <li>1966: </li>
-    <li>1967: </li>
-    <li>1968: </li>
-    <li>1969: </li>
-    <li>1970: </li>
+    <li>1966: 10.5</li>
+    <li>1967: 12.5</li>
+    <li>1968: 14.1</li>
+    <li>1969: 13.9</li>
+    <li>1970: 13.3</li>
     <li>1971: </li>
     <li>1972: </li>
     <li>1973: </li>
     <li>1974: </li>
     <li>1975: </li>
     <li>1976: </li>
-    <li>1977: </li>
-    <li>1978: </li>
-    <li>1979: </li>
+    <li>1977: 9.9</li>
+    <li>1978: 10.4</li>
+    <li>1979: 9.3</li>
     <li>1980: </li>
     <li>1981: </li>
-    <li>1982: </li>
-    <li>1983: </li>
-    <li>1984: </li>
-    <li>1985: </li>
-    <li>1986: </li>
-    <li>1987: </li>
-    <li>1988: </li>
-    <li>1989: </li>
-    <li>1990: </li>
-    <li>1991: </li>
-    <li>1992: </li>
-    <li>1993: </li>
-    <li>1994: </li>
-    <li>1995: </li>
-    <li>1996: </li>
-    <li>1997: </li>
-    <li>1998: </li>
-    <li>1999: </li>
-    <li>2000: </li>
-    <li>2001: </li>
-    <li>2002: </li>
-    <li>2003: </li>
-    <li>2004: </li>
-    <li>2005: </li>
-    <li>2006: </li>
-    <li>2007: </li>
-    <li>2008: </li>
-    <li>2009: </li>
-    <li>2010: </li>
-    <li>2011: </li>
-    <li>2012: </li>
-    <li>2013: </li>
-    <li>2014: </li>
-    <li>2015: </li>
-    <li>2016: </li>
-    <li>2017: </li>
-    <li>2018: </li>
-    <li>2019: </li>
+    <li>1982: 9.9</li>
+    <li>1983: 9.1</li>
+    <li>1984: 9</li>
+    <li>1985: 9.7</li>
+    <li>1986: 10.8</li>
+    <li>1987: 10.7</li>
+    <li>1988: 10.4</li>
+    <li>1989: 9.9</li>
+    <li>1990: 9.3</li>
+    <li>1991: 8.2</li>
+    <li>1992: 9</li>
+    <li>1993: 9.3</li>
+    <li>1994: 8.7</li>
+    <li>1995: 8.4</li>
+    <li>1996: 8.4</li>
+    <li>1997: 8.1</li>
+    <li>1998: 8.4</li>
+    <li>1999: 8.4</li>
+    <li>2000: 9.4</li>
+    <li>2001: 10.3</li>
+    <li>2002: 10.1</li>
+    <li>2003: 10.3</li>
+    <li>2004: 9.4</li>
+    <li>2005: 9.1</li>
+    <li>2006: 8.9</li>
+    <li>2007: 8.3</li>
+    <li>2008: 8.5</li>
+    <li>2009: 7.9</li>
+    <li>2010: 7.9</li>
+    <li>2011: 7.6</li>
+    <li>2012: 8.4</li>
+    <li>2013: 7.6</li>
+    <li>2014: 8.1</li>
+    <li>2015: 7.9</li>
+    <li>2016: 7.6</li>
+    <li>2017: 13.3</li>
+    <li>2018: 8</li>
+    <li>2019: 7.8</li>
     <li>2020: </li>
-    <li>Historical Background: </li>
-    <li>Total suicide deaths throughout 1960-2020 in this country: </li>
-    <li>Macro Average across all countries during 1960-2020: [object Object]</li>
-    <li>Qualitative comparison between Macro Average and total suicides in this country: </li>
+    <li>Historical Background: https://www.ducksters.com/geography/country/argentina_history_timeline.php. The fluctuating rate of suicide rates may be due to these events: 1955 - Argentina goes through a period of military rule and weak governments. 1976 - The military takes over the government and removes Isabel from office. The Dirty War begins where any suspected opponents to the government are jailed or killed. 1982 - The Falkland War occurs as Argentina invades the British Falkland Islands. British armed forces quickly take back control under the orders of Margaret Thatcher. 2013 - Pope Francis is named the first pope from the Americas</li>
+    <li>Total suicide deaths throughout 1960-2020 in this country: 409</li>
+    <li>Macro Average across all countries during 1960-2020: 622</li>
+    <li>Qualitative comparison between Macro Average and total suicides in this country: The total suicides in this counrty is lesser than the average among all countries included from 1960 until 2020.</li>
   </ul>
   </section>
 
