--- a/public/AUS.html
+++ b/public/AUS.html
@@ -133,81 +133,81 @@
     <h1>AUS</h1>
     <div id='plotly2'></div>
     <script>
-        var data = [{
+        var stats = [{
         x: [1960, 1961, 1962,1963,1964,1965,1966,1967,1968,1969,1970,1971,1972,1973,1974,1975,1976,1977,1978,1980,1981,1982,1983,1984,1985,1986,1987,1988,1989,1990,1991,1992,1993,1994,1995,1996,1997,1998,1999,2000,2001,2002,2003,2004,2005,2006,2007,2008,2009,2010,2011,2012,2013,2014,2015,2016,2017,2018,2019,2020],
-        y: [, , ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,],
+        y: [13.6, 15, 17.4,19.8,18.4,18.5,17.9,19,16,15.3,15.4,16.6,15.3,14.1,14.4,13.3,12.9,13.1,12.9,13.2,12.5,12.8,13.2,12.4,12.5,12.8,13.8,14.5,14,13.1,13.6,13.9,13.5,12.1,13.3,12.3,13.6,14.6,14.2,13.4,12.7,12.9,12,11,10.7,,10.6,10.7,11.1,10.8,11,10.9,11.5,11.5,12.6,13.2,12.2,13.6,13,13.3,12.4],
         type: 'scatter'}];
-        Plotly.newPlot('plotly2', data);
+        Plotly.newPlot('plotly2', stats);
     </script>
   </header>
   <section id="country-stats">
   <h2>Stats</h2>
   <ul>
-    <li>1960: </li>
-    <li>1961: </li>
-    <li>1962: </li>
-    <li>1963: </li>
-    <li>1964: </li>
-    <li>1965: </li>
-    <li>1966: </li>
-    <li>1967: </li>
-    <li>1968: </li>
-    <li>1969: </li>
-    <li>1970: </li>
-    <li>1971: </li>
-    <li>1972: </li>
-    <li>1973: </li>
-    <li>1974: </li>
-    <li>1975: </li>
-    <li>1976: </li>
-    <li>1977: </li>
-    <li>1978: </li>
-    <li>1979: </li>
-    <li>1980: </li>
-    <li>1981: </li>
-    <li>1982: </li>
-    <li>1983: </li>
-    <li>1984: </li>
-    <li>1985: </li>
-    <li>1986: </li>
-    <li>1987: </li>
-    <li>1988: </li>
-    <li>1989: </li>
-    <li>1990: </li>
-    <li>1991: </li>
-    <li>1992: </li>
-    <li>1993: </li>
-    <li>1994: </li>
-    <li>1995: </li>
-    <li>1996: </li>
-    <li>1997: </li>
-    <li>1998: </li>
-    <li>1999: </li>
-    <li>2000: </li>
-    <li>2001: </li>
-    <li>2002: </li>
-    <li>2003: </li>
-    <li>2004: </li>
+    <li>1960: 13.6</li>
+    <li>1961: 15</li>
+    <li>1962: 17.4</li>
+    <li>1963: 19.8</li>
+    <li>1964: 18.4</li>
+    <li>1965: 18.5</li>
+    <li>1966: 17.9</li>
+    <li>1967: 19</li>
+    <li>1968: 16</li>
+    <li>1969: 15.3</li>
+    <li>1970: 15.4</li>
+    <li>1971: 16.6</li>
+    <li>1972: 15.3</li>
+    <li>1973: 14.1</li>
+    <li>1974: 14.4</li>
+    <li>1975: 13.3</li>
+    <li>1976: 12.9</li>
+    <li>1977: 13.1</li>
+    <li>1978: 12.9</li>
+    <li>1979: 13.2</li>
+    <li>1980: 12.5</li>
+    <li>1981: 12.8</li>
+    <li>1982: 13.2</li>
+    <li>1983: 12.4</li>
+    <li>1984: 12.5</li>
+    <li>1985: 12.8</li>
+    <li>1986: 13.8</li>
+    <li>1987: 14.5</li>
+    <li>1988: 14</li>
+    <li>1989: 13.1</li>
+    <li>1990: 13.6</li>
+    <li>1991: 13.9</li>
+    <li>1992: 13.5</li>
+    <li>1993: 12.1</li>
+    <li>1994: 13.3</li>
+    <li>1995: 12.3</li>
+    <li>1996: 13.6</li>
+    <li>1997: 14.6</li>
+    <li>1998: 14.2</li>
+    <li>1999: 13.4</li>
+    <li>2000: 12.7</li>
+    <li>2001: 12.9</li>
+    <li>2002: 12</li>
+    <li>2003: 11</li>
+    <li>2004: 10.7</li>
     <li>2005: </li>
-    <li>2006: </li>
-    <li>2007: </li>
-    <li>2008: </li>
-    <li>2009: </li>
-    <li>2010: </li>
-    <li>2011: </li>
-    <li>2012: </li>
-    <li>2013: </li>
-    <li>2014: </li>
-    <li>2015: </li>
-    <li>2016: </li>
-    <li>2017: </li>
-    <li>2018: </li>
-    <li>2019: </li>
-    <li>2020: </li>
-    <li>Historical Background: </li>
-    <li>Total suicide deaths throughout 1960-2020 in this country: </li>
-    <li>Macro Average across all countries during 1960-2020: [object Object]</li>
-    <li>Qualitative comparison between Macro Average and total suicides in this country: </li>
+    <li>2006: 10.6</li>
+    <li>2007: 10.7</li>
+    <li>2008: 11.1</li>
+    <li>2009: 10.8</li>
+    <li>2010: 11</li>
+    <li>2011: 10.9</li>
+    <li>2012: 11.5</li>
+    <li>2013: 11.5</li>
+    <li>2014: 12.6</li>
+    <li>2015: 13.2</li>
+    <li>2016: 12.2</li>
+    <li>2017: 15.4</li>
+    <li>2018: 13</li>
+    <li>2019: 13.3</li>
+    <li>2020: 12.4</li>
+    <li>Historical Background: https://www.nma.gov.au/defining-moments/defining-moments-timeline. The fluctuating rate of suicide rates may be due to these events: 1965 - Australian troops committed to the US war effort in Vietnam. 1974 - Devastation from Cyclone Tracy. 1996 - Port Arthur massacre where 35 people were killed. 2002 - Bali bombings represent the single largest loss of Australian life due to an act of terror. 2020 - The first case of COVID-19 is confirmed in Australia</li>
+    <li>Total suicide deaths throughout 1960-2020 in this country: 790</li>
+    <li>Macro Average across all countries during 1960-2020: 622</li>
+    <li>Qualitative comparison between Macro Average and total suicides in this country: The total suicides in this counrty is greater than the average among all countries included from 1960 until 2020.</li>
   </ul>
   </section>
 
