--- a/public/AUT.html
+++ b/public/AUT.html
@@ -133,81 +133,81 @@
     <h1>AUT</h1>
     <div id='plotly2'></div>
     <script>
-        var data = [{
+        var stats = [{
         x: [1960, 1961, 1962,1963,1964,1965,1966,1967,1968,1969,1970,1971,1972,1973,1974,1975,1976,1977,1978,1980,1981,1982,1983,1984,1985,1986,1987,1988,1989,1990,1991,1992,1993,1994,1995,1996,1997,1998,1999,2000,2001,2002,2003,2004,2005,2006,2007,2008,2009,2010,2011,2012,2013,2014,2015,2016,2017,2018,2019,2020],
-        y: [, , ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,],
+        y: [25, 23.9, 24.6,23.7,24.9,25.2,25.4,24.8,24.4,25.1,27.3,25.7,26.4,25,26.6,27,25.1,26.6,26.9,27.2,27.7,28.7,29.2,28.7,28.4,28.9,29.4,28.5,25.3,25.9,24.7,23.6,23.4,22.4,23.2,23.1,23.1,20.4,20.1,19.9,20.1,18.6,19.2,18,17.3,16.8,15.2,15.1,14.6,14.6,14.4,14.6,14.2,14.2,14.3,13.4,12.7,12.8,12.5,11.4,10.8],
         type: 'scatter'}];
-        Plotly.newPlot('plotly2', data);
+        Plotly.newPlot('plotly2', stats);
     </script>
   </header>
   <section id="country-stats">
   <h2>Stats</h2>
   <ul>
-    <li>1960: </li>
-    <li>1961: </li>
-    <li>1962: </li>
-    <li>1963: </li>
-    <li>1964: </li>
-    <li>1965: </li>
-    <li>1966: </li>
-    <li>1967: </li>
-    <li>1968: </li>
-    <li>1969: </li>
-    <li>1970: </li>
-    <li>1971: </li>
-    <li>1972: </li>
-    <li>1973: </li>
-    <li>1974: </li>
-    <li>1975: </li>
-    <li>1976: </li>
-    <li>1977: </li>
-    <li>1978: </li>
-    <li>1979: </li>
-    <li>1980: </li>
-    <li>1981: </li>
-    <li>1982: </li>
-    <li>1983: </li>
-    <li>1984: </li>
-    <li>1985: </li>
-    <li>1986: </li>
-    <li>1987: </li>
-    <li>1988: </li>
-    <li>1989: </li>
-    <li>1990: </li>
-    <li>1991: </li>
-    <li>1992: </li>
-    <li>1993: </li>
-    <li>1994: </li>
-    <li>1995: </li>
-    <li>1996: </li>
-    <li>1997: </li>
-    <li>1998: </li>
-    <li>1999: </li>
-    <li>2000: </li>
-    <li>2001: </li>
-    <li>2002: </li>
-    <li>2003: </li>
-    <li>2004: </li>
-    <li>2005: </li>
-    <li>2006: </li>
-    <li>2007: </li>
-    <li>2008: </li>
-    <li>2009: </li>
-    <li>2010: </li>
-    <li>2011: </li>
-    <li>2012: </li>
-    <li>2013: </li>
-    <li>2014: </li>
-    <li>2015: </li>
-    <li>2016: </li>
-    <li>2017: </li>
-    <li>2018: </li>
-    <li>2019: </li>
-    <li>2020: </li>
-    <li>Historical Background: </li>
-    <li>Total suicide deaths throughout 1960-2020 in this country: </li>
-    <li>Macro Average across all countries during 1960-2020: [object Object]</li>
-    <li>Qualitative comparison between Macro Average and total suicides in this country: </li>
+    <li>1960: 25</li>
+    <li>1961: 23.9</li>
+    <li>1962: 24.6</li>
+    <li>1963: 23.7</li>
+    <li>1964: 24.9</li>
+    <li>1965: 25.2</li>
+    <li>1966: 25.4</li>
+    <li>1967: 24.8</li>
+    <li>1968: 24.4</li>
+    <li>1969: 25.1</li>
+    <li>1970: 27.3</li>
+    <li>1971: 25.7</li>
+    <li>1972: 26.4</li>
+    <li>1973: 25</li>
+    <li>1974: 26.6</li>
+    <li>1975: 27</li>
+    <li>1976: 25.1</li>
+    <li>1977: 26.6</li>
+    <li>1978: 26.9</li>
+    <li>1979: 27.2</li>
+    <li>1980: 27.7</li>
+    <li>1981: 28.7</li>
+    <li>1982: 29.2</li>
+    <li>1983: 28.7</li>
+    <li>1984: 28.4</li>
+    <li>1985: 28.9</li>
+    <li>1986: 29.4</li>
+    <li>1987: 28.5</li>
+    <li>1988: 25.3</li>
+    <li>1989: 25.9</li>
+    <li>1990: 24.7</li>
+    <li>1991: 23.6</li>
+    <li>1992: 23.4</li>
+    <li>1993: 22.4</li>
+    <li>1994: 23.2</li>
+    <li>1995: 23.1</li>
+    <li>1996: 23.1</li>
+    <li>1997: 20.4</li>
+    <li>1998: 20.1</li>
+    <li>1999: 19.9</li>
+    <li>2000: 20.1</li>
+    <li>2001: 18.6</li>
+    <li>2002: 19.2</li>
+    <li>2003: 18</li>
+    <li>2004: 17.3</li>
+    <li>2005: 16.8</li>
+    <li>2006: 15.2</li>
+    <li>2007: 15.1</li>
+    <li>2008: 14.6</li>
+    <li>2009: 14.6</li>
+    <li>2010: 14.4</li>
+    <li>2011: 14.6</li>
+    <li>2012: 14.2</li>
+    <li>2013: 14.2</li>
+    <li>2014: 14.3</li>
+    <li>2015: 13.4</li>
+    <li>2016: 12.7</li>
+    <li>2017: 27.3</li>
+    <li>2018: 12.5</li>
+    <li>2019: 11.4</li>
+    <li>2020: 10.8</li>
+    <li>Historical Background: https://www.bbc.com/news/world-europe-17431408.amp. The fluctuating rate of suicide rates may be due to these events: 1955 - Treaty signed by UK and France and US and USSR establishes an independent but neutral Austria - a convenient buffer between the West and the Soviet bloc. Austria joins the United Nations. 1986 - Ex-UN Secretary-General Kurt Waldheim elected president. 2001 - Deal signed on compensating Jews whose assets were seized by Nazis. Government and companies to pay $360m into a settlement fund. 2020 Jihadist gunmen kills four people in central Vienna</li>
+    <li>Total suicide deaths throughout 1960-2020 in this country: 1303</li>
+    <li>Macro Average across all countries during 1960-2020: 622</li>
+    <li>Qualitative comparison between Macro Average and total suicides in this country: The total suicides in this counrty is greater than the average among all countries included from 1960 until 2020.</li>
   </ul>
   </section>
 
