--- a/public/BRA.html
+++ b/public/BRA.html
@@ -133,11 +133,11 @@
     <h1>BRA</h1>
     <div id='plotly2'></div>
     <script>
-        var data = [{
+        var stats = [{
         x: [1960, 1961, 1962,1963,1964,1965,1966,1967,1968,1969,1970,1971,1972,1973,1974,1975,1976,1977,1978,1980,1981,1982,1983,1984,1985,1986,1987,1988,1989,1990,1991,1992,1993,1994,1995,1996,1997,1998,1999,2000,2001,2002,2003,2004,2005,2006,2007,2008,2009,2010,2011,2012,2013,2014,2015,2016,2017,2018,2019,2020],
-        y: [, , ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,],
+        y: [, , ,,,,,,,,,,,,,,,,,4.4,5,4.8,4.6,5.2,5,4.8,,,,,4.8,5.1,4.9,4.9,5.1,5.5,5.6,5.5,5.5,4.9,5.1,5.5,5.3,5.2,5.3,5.6,5.4,5.5,5.6,5.6,5.6,5.7,5.9,5.9,5.8,6.1,6.1,6.5,6.5,6.7,],
         type: 'scatter'}];
-        Plotly.newPlot('plotly2', data);
+        Plotly.newPlot('plotly2', stats);
     </script>
   </header>
   <section id="country-stats">
@@ -162,52 +162,52 @@
     <li>1976: </li>
     <li>1977: </li>
     <li>1978: </li>
-    <li>1979: </li>
-    <li>1980: </li>
-    <li>1981: </li>
-    <li>1982: </li>
-    <li>1983: </li>
-    <li>1984: </li>
-    <li>1985: </li>
+    <li>1979: 4.4</li>
+    <li>1980: 5</li>
+    <li>1981: 4.8</li>
+    <li>1982: 4.6</li>
+    <li>1983: 5.2</li>
+    <li>1984: 5</li>
+    <li>1985: 4.8</li>
     <li>1986: </li>
     <li>1987: </li>
     <li>1988: </li>
     <li>1989: </li>
-    <li>1990: </li>
-    <li>1991: </li>
-    <li>1992: </li>
-    <li>1993: </li>
-    <li>1994: </li>
-    <li>1995: </li>
-    <li>1996: </li>
-    <li>1997: </li>
-    <li>1998: </li>
-    <li>1999: </li>
-    <li>2000: </li>
-    <li>2001: </li>
-    <li>2002: </li>
-    <li>2003: </li>
-    <li>2004: </li>
-    <li>2005: </li>
-    <li>2006: </li>
-    <li>2007: </li>
-    <li>2008: </li>
-    <li>2009: </li>
-    <li>2010: </li>
-    <li>2011: </li>
-    <li>2012: </li>
-    <li>2013: </li>
-    <li>2014: </li>
-    <li>2015: </li>
-    <li>2016: </li>
+    <li>1990: 4.8</li>
+    <li>1991: 5.1</li>
+    <li>1992: 4.9</li>
+    <li>1993: 4.9</li>
+    <li>1994: 5.1</li>
+    <li>1995: 5.5</li>
+    <li>1996: 5.6</li>
+    <li>1997: 5.5</li>
+    <li>1998: 5.5</li>
+    <li>1999: 4.9</li>
+    <li>2000: 5.1</li>
+    <li>2001: 5.5</li>
+    <li>2002: 5.3</li>
+    <li>2003: 5.2</li>
+    <li>2004: 5.3</li>
+    <li>2005: 5.6</li>
+    <li>2006: 5.4</li>
+    <li>2007: 5.5</li>
+    <li>2008: 5.6</li>
+    <li>2009: 5.6</li>
+    <li>2010: 5.6</li>
+    <li>2011: 5.7</li>
+    <li>2012: 5.9</li>
+    <li>2013: 5.9</li>
+    <li>2014: 5.8</li>
+    <li>2015: 6.1</li>
+    <li>2016: 6.1</li>
     <li>2017: </li>
-    <li>2018: </li>
-    <li>2019: </li>
+    <li>2018: 6.5</li>
+    <li>2019: 6.7</li>
     <li>2020: </li>
-    <li>Historical Background: </li>
-    <li>Total suicide deaths throughout 1960-2020 in this country: </li>
-    <li>Macro Average across all countries during 1960-2020: [object Object]</li>
-    <li>Qualitative comparison between Macro Average and total suicides in this country: </li>
+    <li>Historical Background: https://www.ducksters.com/geography/country/brazil_history_timeline.php. The fluctuating rate of suicide rates may be due to these events: 1954 - The military demands Vargas&#39; resignation. He commits suicide. 1964 - The military takes control of the government. 1985 - The military gives up governmental power and democracy is restored. 2011 - Dilma Rousseff becomes president. She is the first woman president of Brazil</li>
+    <li>Total suicide deaths throughout 1960-2020 in this country: 182</li>
+    <li>Macro Average across all countries during 1960-2020: 622</li>
+    <li>Qualitative comparison between Macro Average and total suicides in this country: The total suicides in this counrty is lesser than the average among all countries included from 1960 until 2020.</li>
   </ul>
   </section>
 
