--- a/public/CHL.html
+++ b/public/CHL.html
@@ -133,81 +133,81 @@
     <h1>CHL</h1>
     <div id='plotly2'></div>
     <script>
-        var data = [{
+        var stats = [{
         x: [1960, 1961, 1962,1963,1964,1965,1966,1967,1968,1969,1970,1971,1972,1973,1974,1975,1976,1977,1978,1980,1981,1982,1983,1984,1985,1986,1987,1988,1989,1990,1991,1992,1993,1994,1995,1996,1997,1998,1999,2000,2001,2002,2003,2004,2005,2006,2007,2008,2009,2010,2011,2012,2013,2014,2015,2016,2017,2018,2019,2020],
-        y: [, , ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,],
+        y: [11, 10.2, 9.1,5.1,3.9,2.9,9.5,3.5,12,9.6,8,7.8,7.4,7.3,8.1,9.8,7.8,8.1,7.1,7.8,6.1,7.4,7.6,,7.8,7.8,7,7.1,7,7.1,7.2,7.3,6,6.9,7.1,8.1,7.6,7.4,8.3,8.3,11.3,11.9,11.6,11.9,11.9,11.4,11.9,11.9,13.2,13.4,12.3,12.5,11.2,10.5,10.6,10.9,10.6,10.5,10,,],
         type: 'scatter'}];
-        Plotly.newPlot('plotly2', data);
+        Plotly.newPlot('plotly2', stats);
     </script>
   </header>
   <section id="country-stats">
   <h2>Stats</h2>
   <ul>
-    <li>1960: </li>
-    <li>1961: </li>
-    <li>1962: </li>
-    <li>1963: </li>
-    <li>1964: </li>
-    <li>1965: </li>
-    <li>1966: </li>
-    <li>1967: </li>
-    <li>1968: </li>
-    <li>1969: </li>
-    <li>1970: </li>
-    <li>1971: </li>
-    <li>1972: </li>
-    <li>1973: </li>
-    <li>1974: </li>
-    <li>1975: </li>
-    <li>1976: </li>
-    <li>1977: </li>
-    <li>1978: </li>
-    <li>1979: </li>
-    <li>1980: </li>
-    <li>1981: </li>
-    <li>1982: </li>
+    <li>1960: 11</li>
+    <li>1961: 10.2</li>
+    <li>1962: 9.1</li>
+    <li>1963: 5.1</li>
+    <li>1964: 3.9</li>
+    <li>1965: 2.9</li>
+    <li>1966: 9.5</li>
+    <li>1967: 3.5</li>
+    <li>1968: 12</li>
+    <li>1969: 9.6</li>
+    <li>1970: 8</li>
+    <li>1971: 7.8</li>
+    <li>1972: 7.4</li>
+    <li>1973: 7.3</li>
+    <li>1974: 8.1</li>
+    <li>1975: 9.8</li>
+    <li>1976: 7.8</li>
+    <li>1977: 8.1</li>
+    <li>1978: 7.1</li>
+    <li>1979: 7.8</li>
+    <li>1980: 6.1</li>
+    <li>1981: 7.4</li>
+    <li>1982: 7.6</li>
     <li>1983: </li>
-    <li>1984: </li>
-    <li>1985: </li>
-    <li>1986: </li>
-    <li>1987: </li>
-    <li>1988: </li>
-    <li>1989: </li>
-    <li>1990: </li>
-    <li>1991: </li>
-    <li>1992: </li>
-    <li>1993: </li>
-    <li>1994: </li>
-    <li>1995: </li>
-    <li>1996: </li>
-    <li>1997: </li>
-    <li>1998: </li>
-    <li>1999: </li>
-    <li>2000: </li>
-    <li>2001: </li>
-    <li>2002: </li>
-    <li>2003: </li>
-    <li>2004: </li>
-    <li>2005: </li>
-    <li>2006: </li>
-    <li>2007: </li>
-    <li>2008: </li>
-    <li>2009: </li>
-    <li>2010: </li>
-    <li>2011: </li>
-    <li>2012: </li>
-    <li>2013: </li>
-    <li>2014: </li>
-    <li>2015: </li>
-    <li>2016: </li>
-    <li>2017: </li>
-    <li>2018: </li>
+    <li>1984: 7.8</li>
+    <li>1985: 7.8</li>
+    <li>1986: 7</li>
+    <li>1987: 7.1</li>
+    <li>1988: 7</li>
+    <li>1989: 7.1</li>
+    <li>1990: 7.2</li>
+    <li>1991: 7.3</li>
+    <li>1992: 6</li>
+    <li>1993: 6.9</li>
+    <li>1994: 7.1</li>
+    <li>1995: 8.1</li>
+    <li>1996: 7.6</li>
+    <li>1997: 7.4</li>
+    <li>1998: 8.3</li>
+    <li>1999: 8.3</li>
+    <li>2000: 11.3</li>
+    <li>2001: 11.9</li>
+    <li>2002: 11.6</li>
+    <li>2003: 11.9</li>
+    <li>2004: 11.9</li>
+    <li>2005: 11.4</li>
+    <li>2006: 11.9</li>
+    <li>2007: 11.9</li>
+    <li>2008: 13.2</li>
+    <li>2009: 13.4</li>
+    <li>2010: 12.3</li>
+    <li>2011: 12.5</li>
+    <li>2012: 11.2</li>
+    <li>2013: 10.5</li>
+    <li>2014: 10.6</li>
+    <li>2015: 10.9</li>
+    <li>2016: 10.6</li>
+    <li>2017: 8</li>
+    <li>2018: 10</li>
     <li>2019: </li>
     <li>2020: </li>
-    <li>Historical Background: </li>
-    <li>Total suicide deaths throughout 1960-2020 in this country: </li>
-    <li>Macro Average across all countries during 1960-2020: [object Object]</li>
-    <li>Qualitative comparison between Macro Average and total suicides in this country: </li>
+    <li>Historical Background: https://www.bbc.com/news/world-latin-america-19356356.amp. The fluctuating rate of suicide rates may be due to these events: 1964 - Eduardo Frei Montalva elected president and introduces cautious social reforms but fails to curb inflation. 1973 - Chief of Staff General Augusto Pinochet ousts Allende in a coup and proceeds to establish a brutal dictatorship. 2000 - Chilean courts strip Gen Pinochet of his immunity from prosecution several times with judges usually citing concerns over the general&#39;s health. 2010 - Hundreds die and widespread damage is caused as a massive earthquake strikes central Chile. The 8.8 magnitude quake is the biggest to hit the country in 50 years</li>
+    <li>Total suicide deaths throughout 1960-2020 in this country: 490</li>
+    <li>Macro Average across all countries during 1960-2020: 622</li>
+    <li>Qualitative comparison between Macro Average and total suicides in this country: The total suicides in this counrty is lesser than the average among all countries included from 1960 until 2020.</li>
   </ul>
   </section>
 
