--- a/public/DEU.html
+++ b/public/DEU.html
@@ -133,11 +133,11 @@
     <h1>DEU</h1>
     <div id='plotly2'></div>
     <script>
-        var data = [{
+        var stats = [{
         x: [1960, 1961, 1962,1963,1964,1965,1966,1967,1968,1969,1970,1971,1972,1973,1974,1975,1976,1977,1978,1980,1981,1982,1983,1984,1985,1986,1987,1988,1989,1990,1991,1992,1993,1994,1995,1996,1997,1998,1999,2000,2001,2002,2003,2004,2005,2006,2007,2008,2009,2010,2011,2012,2013,2014,2015,2016,2017,2018,2019,2020],
-        y: [, , ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,],
+        y: [, , ,,,,,,,,,,,,,,,,,,,,,,,,,,,,17.7,17.7,16.8,15.8,15.7,15.8,14.9,14.8,14.1,13.4,13.2,13.2,13.1,13,12.4,11.8,11.1,10.6,10.6,10.7,11.2,11.2,10.8,11.2,11.2,10.9,10.6,9.9,10,9.6,9.7],
         type: 'scatter'}];
-        Plotly.newPlot('plotly2', data);
+        Plotly.newPlot('plotly2', stats);
     </script>
   </header>
   <section id="country-stats">
@@ -173,41 +173,41 @@
     <li>1987: </li>
     <li>1988: </li>
     <li>1989: </li>
-    <li>1990: </li>
-    <li>1991: </li>
-    <li>1992: </li>
-    <li>1993: </li>
-    <li>1994: </li>
-    <li>1995: </li>
-    <li>1996: </li>
-    <li>1997: </li>
-    <li>1998: </li>
-    <li>1999: </li>
-    <li>2000: </li>
-    <li>2001: </li>
-    <li>2002: </li>
-    <li>2003: </li>
-    <li>2004: </li>
-    <li>2005: </li>
-    <li>2006: </li>
-    <li>2007: </li>
-    <li>2008: </li>
-    <li>2009: </li>
-    <li>2010: </li>
-    <li>2011: </li>
-    <li>2012: </li>
-    <li>2013: </li>
-    <li>2014: </li>
-    <li>2015: </li>
-    <li>2016: </li>
+    <li>1990: 17.7</li>
+    <li>1991: 17.7</li>
+    <li>1992: 16.8</li>
+    <li>1993: 15.8</li>
+    <li>1994: 15.7</li>
+    <li>1995: 15.8</li>
+    <li>1996: 14.9</li>
+    <li>1997: 14.8</li>
+    <li>1998: 14.1</li>
+    <li>1999: 13.4</li>
+    <li>2000: 13.2</li>
+    <li>2001: 13.2</li>
+    <li>2002: 13.1</li>
+    <li>2003: 13</li>
+    <li>2004: 12.4</li>
+    <li>2005: 11.8</li>
+    <li>2006: 11.1</li>
+    <li>2007: 10.6</li>
+    <li>2008: 10.6</li>
+    <li>2009: 10.7</li>
+    <li>2010: 11.2</li>
+    <li>2011: 11.2</li>
+    <li>2012: 10.8</li>
+    <li>2013: 11.2</li>
+    <li>2014: 11.2</li>
+    <li>2015: 10.9</li>
+    <li>2016: 10.6</li>
     <li>2017: </li>
-    <li>2018: </li>
-    <li>2019: </li>
-    <li>2020: </li>
-    <li>Historical Background: </li>
-    <li>Total suicide deaths throughout 1960-2020 in this country: </li>
-    <li>Macro Average across all countries during 1960-2020: [object Object]</li>
-    <li>Qualitative comparison between Macro Average and total suicides in this country: </li>
+    <li>2018: 10</li>
+    <li>2019: 9.6</li>
+    <li>2020: 9.7</li>
+    <li>Historical Background: https://www.ducksters.com/geography/country/germany_history_timeline.php. The fluctuating rate of suicide rates may be due to these events: 1961 - The Berlin Wall is built. 1973 - East and West Germany both join the United Nations. 1989 - The Berlin Wall is torn down. 1990 - Germany is reunified into a single country. 2005 - Angela Merkel is elected as the first woman Chancellor of Germany</li>
+    <li>Total suicide deaths throughout 1960-2020 in this country: 377</li>
+    <li>Macro Average across all countries during 1960-2020: 622</li>
+    <li>Qualitative comparison between Macro Average and total suicides in this country: The total suicides in this counrty is lesser than the average among all countries included from 1960 until 2020.</li>
   </ul>
   </section>
 
