--- a/public/DNK.html
+++ b/public/DNK.html
@@ -133,81 +133,81 @@
     <h1>DNK</h1>
     <div id='plotly2'></div>
     <script>
-        var data = [{
+        var stats = [{
         x: [1960, 1961, 1962,1963,1964,1965,1966,1967,1968,1969,1970,1971,1972,1973,1974,1975,1976,1977,1978,1980,1981,1982,1983,1984,1985,1986,1987,1988,1989,1990,1991,1992,1993,1994,1995,1996,1997,1998,1999,2000,2001,2002,2003,2004,2005,2006,2007,2008,2009,2010,2011,2012,2013,2014,2015,2016,2017,2018,2019,2020],
-        y: [, , ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,],
+        y: [23.5, 19.7, 22.4,22.1,24.4,22.2,20.4,20.1,23.5,23.9,24.4,28.2,27.2,27.1,29.7,27.2,26.7,26.9,26,28.5,34.8,32.8,31.4,30.7,30.7,29.5,29.3,29.3,27.2,28.1,25,23.2,22.8,23,19.6,18.1,17.4,15.9,14.6,14.6,13.9,13.8,13,11.9,12.3,11.8,12,10.6,11,11.2,10.1,10.5,11.6,10.6,11,9.7,9.9,9.8,9.7,,],
         type: 'scatter'}];
-        Plotly.newPlot('plotly2', data);
+        Plotly.newPlot('plotly2', stats);
     </script>
   </header>
   <section id="country-stats">
   <h2>Stats</h2>
   <ul>
-    <li>1960: </li>
-    <li>1961: </li>
-    <li>1962: </li>
-    <li>1963: </li>
-    <li>1964: </li>
-    <li>1965: </li>
-    <li>1966: </li>
-    <li>1967: </li>
-    <li>1968: </li>
-    <li>1969: </li>
-    <li>1970: </li>
-    <li>1971: </li>
-    <li>1972: </li>
-    <li>1973: </li>
-    <li>1974: </li>
-    <li>1975: </li>
-    <li>1976: </li>
-    <li>1977: </li>
-    <li>1978: </li>
-    <li>1979: </li>
-    <li>1980: </li>
-    <li>1981: </li>
-    <li>1982: </li>
-    <li>1983: </li>
-    <li>1984: </li>
-    <li>1985: </li>
-    <li>1986: </li>
-    <li>1987: </li>
-    <li>1988: </li>
-    <li>1989: </li>
-    <li>1990: </li>
-    <li>1991: </li>
-    <li>1992: </li>
-    <li>1993: </li>
-    <li>1994: </li>
-    <li>1995: </li>
-    <li>1996: </li>
-    <li>1997: </li>
-    <li>1998: </li>
-    <li>1999: </li>
-    <li>2000: </li>
-    <li>2001: </li>
-    <li>2002: </li>
-    <li>2003: </li>
-    <li>2004: </li>
-    <li>2005: </li>
-    <li>2006: </li>
-    <li>2007: </li>
-    <li>2008: </li>
-    <li>2009: </li>
-    <li>2010: </li>
-    <li>2011: </li>
-    <li>2012: </li>
-    <li>2013: </li>
-    <li>2014: </li>
-    <li>2015: </li>
-    <li>2016: </li>
-    <li>2017: </li>
-    <li>2018: </li>
+    <li>1960: 23.5</li>
+    <li>1961: 19.7</li>
+    <li>1962: 22.4</li>
+    <li>1963: 22.1</li>
+    <li>1964: 24.4</li>
+    <li>1965: 22.2</li>
+    <li>1966: 20.4</li>
+    <li>1967: 20.1</li>
+    <li>1968: 23.5</li>
+    <li>1969: 23.9</li>
+    <li>1970: 24.4</li>
+    <li>1971: 28.2</li>
+    <li>1972: 27.2</li>
+    <li>1973: 27.1</li>
+    <li>1974: 29.7</li>
+    <li>1975: 27.2</li>
+    <li>1976: 26.7</li>
+    <li>1977: 26.9</li>
+    <li>1978: 26</li>
+    <li>1979: 28.5</li>
+    <li>1980: 34.8</li>
+    <li>1981: 32.8</li>
+    <li>1982: 31.4</li>
+    <li>1983: 30.7</li>
+    <li>1984: 30.7</li>
+    <li>1985: 29.5</li>
+    <li>1986: 29.3</li>
+    <li>1987: 29.3</li>
+    <li>1988: 27.2</li>
+    <li>1989: 28.1</li>
+    <li>1990: 25</li>
+    <li>1991: 23.2</li>
+    <li>1992: 22.8</li>
+    <li>1993: 23</li>
+    <li>1994: 19.6</li>
+    <li>1995: 18.1</li>
+    <li>1996: 17.4</li>
+    <li>1997: 15.9</li>
+    <li>1998: 14.6</li>
+    <li>1999: 14.6</li>
+    <li>2000: 13.9</li>
+    <li>2001: 13.8</li>
+    <li>2002: 13</li>
+    <li>2003: 11.9</li>
+    <li>2004: 12.3</li>
+    <li>2005: 11.8</li>
+    <li>2006: 12</li>
+    <li>2007: 10.6</li>
+    <li>2008: 11</li>
+    <li>2009: 11.2</li>
+    <li>2010: 10.1</li>
+    <li>2011: 10.5</li>
+    <li>2012: 11.6</li>
+    <li>2013: 10.6</li>
+    <li>2014: 11</li>
+    <li>2015: 9.7</li>
+    <li>2016: 9.9</li>
+    <li>2017: 24.4</li>
+    <li>2018: 9.7</li>
     <li>2019: </li>
     <li>2020: </li>
-    <li>Historical Background: </li>
-    <li>Total suicide deaths throughout 1960-2020 in this country: </li>
-    <li>Macro Average across all countries during 1960-2020: [object Object]</li>
-    <li>Qualitative comparison between Macro Average and total suicides in this country: </li>
+    <li>Historical Background: https://www.bbc.com/news/world-europe-17930409. The fluctuating rate of suicide rates may be due to these events: 1959 - Denmark joins European Free Trade Association. 1973 - Denmark joins the European Economic Community. 1985 - Legislation passed banning construction of nuclear power plants in Denmark. 2000 - Danes reject adoption of the euro as their national currency by 53% to 47%. 2013 - Schools shut for a month because of an industrial dispute involving teachers&#39; unions</li>
+    <li>Total suicide deaths throughout 1960-2020 in this country: 1180</li>
+    <li>Macro Average across all countries during 1960-2020: 622</li>
+    <li>Qualitative comparison between Macro Average and total suicides in this country: The total suicides in this counrty is greater than the average among all countries included from 1960 until 2020.</li>
   </ul>
   </section>
 
