--- a/public/FIN.html
+++ b/public/FIN.html
@@ -133,81 +133,81 @@
     <h1>FIN</h1>
     <div id='plotly2'></div>
     <script>
-        var data = [{
+        var stats = [{
         x: [1960, 1961, 1962,1963,1964,1965,1966,1967,1968,1969,1970,1971,1972,1973,1974,1975,1976,1977,1978,1980,1981,1982,1983,1984,1985,1986,1987,1988,1989,1990,1991,1992,1993,1994,1995,1996,1997,1998,1999,2000,2001,2002,2003,2004,2005,2006,2007,2008,2009,2010,2011,2012,2013,2014,2015,2016,2017,2018,2019,2020],
-        y: [, , ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,],
+        y: [25, 25.5, 26.1,23.2,24.6,23.8,23.2,24,25.9,27.4,24.3,24.2,26.5,25.7,26.8,26.9,27.1,27.3,27.4,26.1,26.5,24.7,25,25,26.2,25.4,27.6,28,28.9,29.1,30.6,30.2,28.9,27.8,27.4,27.3,24.3,25.8,23.9,23.4,22.4,23.1,21,20.4,20.3,18.6,19.9,18.5,19.3,19.1,17.6,16.6,15.9,16.1,14.3,,14.1,14.8,14.4,13.4,],
         type: 'scatter'}];
-        Plotly.newPlot('plotly2', data);
+        Plotly.newPlot('plotly2', stats);
     </script>
   </header>
   <section id="country-stats">
   <h2>Stats</h2>
   <ul>
-    <li>1960: </li>
-    <li>1961: </li>
-    <li>1962: </li>
-    <li>1963: </li>
-    <li>1964: </li>
-    <li>1965: </li>
-    <li>1966: </li>
-    <li>1967: </li>
-    <li>1968: </li>
-    <li>1969: </li>
-    <li>1970: </li>
-    <li>1971: </li>
-    <li>1972: </li>
-    <li>1973: </li>
-    <li>1974: </li>
-    <li>1975: </li>
-    <li>1976: </li>
-    <li>1977: </li>
-    <li>1978: </li>
-    <li>1979: </li>
-    <li>1980: </li>
-    <li>1981: </li>
-    <li>1982: </li>
-    <li>1983: </li>
-    <li>1984: </li>
-    <li>1985: </li>
-    <li>1986: </li>
-    <li>1987: </li>
-    <li>1988: </li>
-    <li>1989: </li>
-    <li>1990: </li>
-    <li>1991: </li>
-    <li>1992: </li>
-    <li>1993: </li>
-    <li>1994: </li>
-    <li>1995: </li>
-    <li>1996: </li>
-    <li>1997: </li>
-    <li>1998: </li>
-    <li>1999: </li>
-    <li>2000: </li>
-    <li>2001: </li>
-    <li>2002: </li>
-    <li>2003: </li>
-    <li>2004: </li>
-    <li>2005: </li>
-    <li>2006: </li>
-    <li>2007: </li>
-    <li>2008: </li>
-    <li>2009: </li>
-    <li>2010: </li>
-    <li>2011: </li>
-    <li>2012: </li>
-    <li>2013: </li>
-    <li>2014: </li>
+    <li>1960: 25</li>
+    <li>1961: 25.5</li>
+    <li>1962: 26.1</li>
+    <li>1963: 23.2</li>
+    <li>1964: 24.6</li>
+    <li>1965: 23.8</li>
+    <li>1966: 23.2</li>
+    <li>1967: 24</li>
+    <li>1968: 25.9</li>
+    <li>1969: 27.4</li>
+    <li>1970: 24.3</li>
+    <li>1971: 24.2</li>
+    <li>1972: 26.5</li>
+    <li>1973: 25.7</li>
+    <li>1974: 26.8</li>
+    <li>1975: 26.9</li>
+    <li>1976: 27.1</li>
+    <li>1977: 27.3</li>
+    <li>1978: 27.4</li>
+    <li>1979: 26.1</li>
+    <li>1980: 26.5</li>
+    <li>1981: 24.7</li>
+    <li>1982: 25</li>
+    <li>1983: 25</li>
+    <li>1984: 26.2</li>
+    <li>1985: 25.4</li>
+    <li>1986: 27.6</li>
+    <li>1987: 28</li>
+    <li>1988: 28.9</li>
+    <li>1989: 29.1</li>
+    <li>1990: 30.6</li>
+    <li>1991: 30.2</li>
+    <li>1992: 28.9</li>
+    <li>1993: 27.8</li>
+    <li>1994: 27.4</li>
+    <li>1995: 27.3</li>
+    <li>1996: 24.3</li>
+    <li>1997: 25.8</li>
+    <li>1998: 23.9</li>
+    <li>1999: 23.4</li>
+    <li>2000: 22.4</li>
+    <li>2001: 23.1</li>
+    <li>2002: 21</li>
+    <li>2003: 20.4</li>
+    <li>2004: 20.3</li>
+    <li>2005: 18.6</li>
+    <li>2006: 19.9</li>
+    <li>2007: 18.5</li>
+    <li>2008: 19.3</li>
+    <li>2009: 19.1</li>
+    <li>2010: 17.6</li>
+    <li>2011: 16.6</li>
+    <li>2012: 15.9</li>
+    <li>2013: 16.1</li>
+    <li>2014: 14.3</li>
     <li>2015: </li>
-    <li>2016: </li>
-    <li>2017: </li>
-    <li>2018: </li>
-    <li>2019: </li>
+    <li>2016: 14.1</li>
+    <li>2017: 24.3</li>
+    <li>2018: 14.4</li>
+    <li>2019: 13.4</li>
     <li>2020: </li>
-    <li>Historical Background: </li>
-    <li>Total suicide deaths throughout 1960-2020 in this country: </li>
-    <li>Macro Average across all countries during 1960-2020: [object Object]</li>
-    <li>Qualitative comparison between Macro Average and total suicides in this country: </li>
+    <li>Historical Background: https://www.bbc.co.uk/news/world-europe-17292092.amp. The fluctuating rate of suicide rates may be due to these events: 1973 - Trade agreements signed with the European Economic Community and Comecon. 1990 - Economic difficulties as former Soviet and eastern European markets collapse. 1995 - Finland becomes member of the European Union. 2008 September - A 22-year-old gunman kills 11 people - including himself - in a shooting spree at a vocational college</li>
+    <li>Total suicide deaths throughout 1960-2020 in this country: 1362</li>
+    <li>Macro Average across all countries during 1960-2020: 622</li>
+    <li>Qualitative comparison between Macro Average and total suicides in this country: The total suicides in this counrty is greater than the average among all countries included from 1960 until 2020.</li>
   </ul>
   </section>
 
