--- a/public/FRA.html
+++ b/public/FRA.html
@@ -133,81 +133,81 @@
     <h1>FRA</h1>
     <div id='plotly2'></div>
     <script>
-        var data = [{
+        var stats = [{
         x: [1960, 1961, 1962,1963,1964,1965,1966,1967,1968,1969,1970,1971,1972,1973,1974,1975,1976,1977,1978,1980,1981,1982,1983,1984,1985,1986,1987,1988,1989,1990,1991,1992,1993,1994,1995,1996,1997,1998,1999,2000,2001,2002,2003,2004,2005,2006,2007,2008,2009,2010,2011,2012,2013,2014,2015,2016,2017,2018,2019,2020],
-        y: [, , ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,],
+        y: [19, 19, 18.1,18.7,17.9,18,18.7,18.6,18.2,18.4,18,17.9,18.8,18,18,18,17.9,18.5,19.4,20.8,21.5,21.6,23.1,23.9,24.2,24.7,25.1,23.7,22.3,22.3,21.5,21.4,21.4,22.2,21.6,21,19.9,19.5,18.6,18,18.8,18,18.1,18.3,18,17.7,17,16.3,16.5,16.7,16.3,16.2,15.1,14.8,13.5,13.6,12.7,12.3,,,],
         type: 'scatter'}];
-        Plotly.newPlot('plotly2', data);
+        Plotly.newPlot('plotly2', stats);
     </script>
   </header>
   <section id="country-stats">
   <h2>Stats</h2>
   <ul>
-    <li>1960: </li>
-    <li>1961: </li>
-    <li>1962: </li>
-    <li>1963: </li>
-    <li>1964: </li>
-    <li>1965: </li>
-    <li>1966: </li>
-    <li>1967: </li>
-    <li>1968: </li>
-    <li>1969: </li>
-    <li>1970: </li>
-    <li>1971: </li>
-    <li>1972: </li>
-    <li>1973: </li>
-    <li>1974: </li>
-    <li>1975: </li>
-    <li>1976: </li>
-    <li>1977: </li>
-    <li>1978: </li>
-    <li>1979: </li>
-    <li>1980: </li>
-    <li>1981: </li>
-    <li>1982: </li>
-    <li>1983: </li>
-    <li>1984: </li>
-    <li>1985: </li>
-    <li>1986: </li>
-    <li>1987: </li>
-    <li>1988: </li>
-    <li>1989: </li>
-    <li>1990: </li>
-    <li>1991: </li>
-    <li>1992: </li>
-    <li>1993: </li>
-    <li>1994: </li>
-    <li>1995: </li>
-    <li>1996: </li>
-    <li>1997: </li>
-    <li>1998: </li>
-    <li>1999: </li>
-    <li>2000: </li>
-    <li>2001: </li>
-    <li>2002: </li>
-    <li>2003: </li>
-    <li>2004: </li>
-    <li>2005: </li>
-    <li>2006: </li>
-    <li>2007: </li>
-    <li>2008: </li>
-    <li>2009: </li>
-    <li>2010: </li>
-    <li>2011: </li>
-    <li>2012: </li>
-    <li>2013: </li>
-    <li>2014: </li>
-    <li>2015: </li>
-    <li>2016: </li>
-    <li>2017: </li>
+    <li>1960: 19</li>
+    <li>1961: 19</li>
+    <li>1962: 18.1</li>
+    <li>1963: 18.7</li>
+    <li>1964: 17.9</li>
+    <li>1965: 18</li>
+    <li>1966: 18.7</li>
+    <li>1967: 18.6</li>
+    <li>1968: 18.2</li>
+    <li>1969: 18.4</li>
+    <li>1970: 18</li>
+    <li>1971: 17.9</li>
+    <li>1972: 18.8</li>
+    <li>1973: 18</li>
+    <li>1974: 18</li>
+    <li>1975: 18</li>
+    <li>1976: 17.9</li>
+    <li>1977: 18.5</li>
+    <li>1978: 19.4</li>
+    <li>1979: 20.8</li>
+    <li>1980: 21.5</li>
+    <li>1981: 21.6</li>
+    <li>1982: 23.1</li>
+    <li>1983: 23.9</li>
+    <li>1984: 24.2</li>
+    <li>1985: 24.7</li>
+    <li>1986: 25.1</li>
+    <li>1987: 23.7</li>
+    <li>1988: 22.3</li>
+    <li>1989: 22.3</li>
+    <li>1990: 21.5</li>
+    <li>1991: 21.4</li>
+    <li>1992: 21.4</li>
+    <li>1993: 22.2</li>
+    <li>1994: 21.6</li>
+    <li>1995: 21</li>
+    <li>1996: 19.9</li>
+    <li>1997: 19.5</li>
+    <li>1998: 18.6</li>
+    <li>1999: 18</li>
+    <li>2000: 18.8</li>
+    <li>2001: 18</li>
+    <li>2002: 18.1</li>
+    <li>2003: 18.3</li>
+    <li>2004: 18</li>
+    <li>2005: 17.7</li>
+    <li>2006: 17</li>
+    <li>2007: 16.3</li>
+    <li>2008: 16.5</li>
+    <li>2009: 16.7</li>
+    <li>2010: 16.3</li>
+    <li>2011: 16.2</li>
+    <li>2012: 15.1</li>
+    <li>2013: 14.8</li>
+    <li>2014: 13.5</li>
+    <li>2015: 13.6</li>
+    <li>2016: 12.7</li>
+    <li>2017: 18</li>
     <li>2018: </li>
     <li>2019: </li>
     <li>2020: </li>
-    <li>Historical Background: </li>
-    <li>Total suicide deaths throughout 1960-2020 in this country: </li>
-    <li>Macro Average across all countries during 1960-2020: [object Object]</li>
-    <li>Qualitative comparison between Macro Average and total suicides in this country: </li>
+    <li>Historical Background: https://www.ducksters.com/geography/country/france_history_timeline.php. The fluctuating rate of suicide rates may be due to these events: 1959 - Charles de Gaulle is elected the President of France. 1981 - Francois Mitterrand is elected president. 1992 - France signs the Maastricht Treaty creating the European Union. 2002 - The Euro replaces the French Franc as the official currency of France</li>
+    <li>Total suicide deaths throughout 1960-2020 in this country: 1074</li>
+    <li>Macro Average across all countries during 1960-2020: 622</li>
+    <li>Qualitative comparison between Macro Average and total suicides in this country: The total suicides in this counrty is greater than the average among all countries included from 1960 until 2020.</li>
   </ul>
   </section>
 
