--- a/public/GRC.html
+++ b/public/GRC.html
@@ -133,81 +133,81 @@
     <h1>GRC</h1>
     <div id='plotly2'></div>
     <script>
-        var data = [{
+        var stats = [{
         x: [1960, 1961, 1962,1963,1964,1965,1966,1967,1968,1969,1970,1971,1972,1973,1974,1975,1976,1977,1978,1980,1981,1982,1983,1984,1985,1986,1987,1988,1989,1990,1991,1992,1993,1994,1995,1996,1997,1998,1999,2000,2001,2002,2003,2004,2005,2006,2007,2008,2009,2010,2011,2012,2013,2014,2015,2016,2017,2018,2019,2020],
-        y: [, , ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,],
+        y: [, 5.4, 4.1,4.7,3.9,3.9,3.8,4.3,4.5,4.4,3.8,4,3.3,3.5,4,3.1,3.2,3.8,3.3,3.3,3.8,3.7,3.9,4,4.2,4.4,4.2,4.4,4.3,4,3.6,3.9,3.6,4.1,3.5,3.6,3.4,3.5,3.8,3.5,3.5,3,2.9,3.3,3.1,3.5,3.4,2.8,3.1,3.3,3.2,4,4.3,4.6,4.9,4.6,4.1,4.5,4.9,4.6,],
         type: 'scatter'}];
-        Plotly.newPlot('plotly2', data);
+        Plotly.newPlot('plotly2', stats);
     </script>
   </header>
   <section id="country-stats">
   <h2>Stats</h2>
   <ul>
     <li>1960: </li>
-    <li>1961: </li>
-    <li>1962: </li>
-    <li>1963: </li>
-    <li>1964: </li>
-    <li>1965: </li>
-    <li>1966: </li>
-    <li>1967: </li>
-    <li>1968: </li>
-    <li>1969: </li>
-    <li>1970: </li>
-    <li>1971: </li>
-    <li>1972: </li>
-    <li>1973: </li>
-    <li>1974: </li>
-    <li>1975: </li>
-    <li>1976: </li>
-    <li>1977: </li>
-    <li>1978: </li>
-    <li>1979: </li>
-    <li>1980: </li>
-    <li>1981: </li>
-    <li>1982: </li>
-    <li>1983: </li>
-    <li>1984: </li>
-    <li>1985: </li>
-    <li>1986: </li>
-    <li>1987: </li>
-    <li>1988: </li>
-    <li>1989: </li>
-    <li>1990: </li>
-    <li>1991: </li>
-    <li>1992: </li>
-    <li>1993: </li>
-    <li>1994: </li>
-    <li>1995: </li>
-    <li>1996: </li>
-    <li>1997: </li>
-    <li>1998: </li>
-    <li>1999: </li>
-    <li>2000: </li>
-    <li>2001: </li>
-    <li>2002: </li>
-    <li>2003: </li>
-    <li>2004: </li>
-    <li>2005: </li>
-    <li>2006: </li>
-    <li>2007: </li>
-    <li>2008: </li>
-    <li>2009: </li>
-    <li>2010: </li>
-    <li>2011: </li>
-    <li>2012: </li>
-    <li>2013: </li>
-    <li>2014: </li>
-    <li>2015: </li>
-    <li>2016: </li>
-    <li>2017: </li>
-    <li>2018: </li>
-    <li>2019: </li>
+    <li>1961: 5.4</li>
+    <li>1962: 4.1</li>
+    <li>1963: 4.7</li>
+    <li>1964: 3.9</li>
+    <li>1965: 3.9</li>
+    <li>1966: 3.8</li>
+    <li>1967: 4.3</li>
+    <li>1968: 4.5</li>
+    <li>1969: 4.4</li>
+    <li>1970: 3.8</li>
+    <li>1971: 4</li>
+    <li>1972: 3.3</li>
+    <li>1973: 3.5</li>
+    <li>1974: 4</li>
+    <li>1975: 3.1</li>
+    <li>1976: 3.2</li>
+    <li>1977: 3.8</li>
+    <li>1978: 3.3</li>
+    <li>1979: 3.3</li>
+    <li>1980: 3.8</li>
+    <li>1981: 3.7</li>
+    <li>1982: 3.9</li>
+    <li>1983: 4</li>
+    <li>1984: 4.2</li>
+    <li>1985: 4.4</li>
+    <li>1986: 4.2</li>
+    <li>1987: 4.4</li>
+    <li>1988: 4.3</li>
+    <li>1989: 4</li>
+    <li>1990: 3.6</li>
+    <li>1991: 3.9</li>
+    <li>1992: 3.6</li>
+    <li>1993: 4.1</li>
+    <li>1994: 3.5</li>
+    <li>1995: 3.6</li>
+    <li>1996: 3.4</li>
+    <li>1997: 3.5</li>
+    <li>1998: 3.8</li>
+    <li>1999: 3.5</li>
+    <li>2000: 3.5</li>
+    <li>2001: 3</li>
+    <li>2002: 2.9</li>
+    <li>2003: 3.3</li>
+    <li>2004: 3.1</li>
+    <li>2005: 3.5</li>
+    <li>2006: 3.4</li>
+    <li>2007: 2.8</li>
+    <li>2008: 3.1</li>
+    <li>2009: 3.3</li>
+    <li>2010: 3.2</li>
+    <li>2011: 4</li>
+    <li>2012: 4.3</li>
+    <li>2013: 4.6</li>
+    <li>2014: 4.9</li>
+    <li>2015: 4.6</li>
+    <li>2016: 4.1</li>
+    <li>2017: 3.8</li>
+    <li>2018: 4.9</li>
+    <li>2019: 4.6</li>
     <li>2020: </li>
-    <li>Historical Background: </li>
-    <li>Total suicide deaths throughout 1960-2020 in this country: </li>
-    <li>Macro Average across all countries during 1960-2020: [object Object]</li>
-    <li>Qualitative comparison between Macro Average and total suicides in this country: </li>
+    <li>Historical Background: https://www.ducksters.com/geography/country/greece_history_timeline.php. The fluctuating rate of suicide rates may be due to these events: 1975 - Greece forms a new parliamentary republic with a new constitution. 1981 - Greece joins the European Union. Andreas Papandreou is elected prime minister for the first time. 2002 - The Euro becomes the official currency replacing the drachma. 2013 - Unemployment climbs to over 26%. The youth unemployment nears 60%</li>
+    <li>Total suicide deaths throughout 1960-2020 in this country: 201</li>
+    <li>Macro Average across all countries during 1960-2020: 622</li>
+    <li>Qualitative comparison between Macro Average and total suicides in this country: The total suicides in this counrty is lesser than the average among all countries included from 1960 until 2020.</li>
   </ul>
   </section>
 
