--- a/public/HRV.html
+++ b/public/HRV.html
@@ -133,11 +133,11 @@
     <h1>HRV</h1>
     <div id='plotly2'></div>
     <script>
-        var data = [{
+        var stats = [{
         x: [1960, 1961, 1962,1963,1964,1965,1966,1967,1968,1969,1970,1971,1972,1973,1974,1975,1976,1977,1978,1980,1981,1982,1983,1984,1985,1986,1987,1988,1989,1990,1991,1992,1993,1994,1995,1996,1997,1998,1999,2000,2001,2002,2003,2004,2005,2006,2007,2008,2009,2010,2011,2012,2013,2014,2015,2016,2017,2018,2019,2020],
-        y: [, , ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,],
+        y: [, , ,,,,,,,,,,,,,,,,,,,,,,25.3,,24.8,27,26.4,24.7,27,25.2,26.1,24.8,25.1,21.3,24.9,23.3,25.7,24.2,24,19.9,20.2,19.5,19.7,19.3,17.6,17.1,17.6,17.3,16.9,15.1,17,15.3,15.9,16.3,15.1,14,,13,],
         type: 'scatter'}];
-        Plotly.newPlot('plotly2', data);
+        Plotly.newPlot('plotly2', stats);
     </script>
   </header>
   <section id="country-stats">
@@ -167,47 +167,47 @@
     <li>1981: </li>
     <li>1982: </li>
     <li>1983: </li>
-    <li>1984: </li>
+    <li>1984: 25.3</li>
     <li>1985: </li>
-    <li>1986: </li>
-    <li>1987: </li>
-    <li>1988: </li>
-    <li>1989: </li>
-    <li>1990: </li>
-    <li>1991: </li>
-    <li>1992: </li>
-    <li>1993: </li>
-    <li>1994: </li>
-    <li>1995: </li>
-    <li>1996: </li>
-    <li>1997: </li>
-    <li>1998: </li>
-    <li>1999: </li>
-    <li>2000: </li>
-    <li>2001: </li>
-    <li>2002: </li>
-    <li>2003: </li>
-    <li>2004: </li>
-    <li>2005: </li>
-    <li>2006: </li>
-    <li>2007: </li>
-    <li>2008: </li>
-    <li>2009: </li>
-    <li>2010: </li>
-    <li>2011: </li>
-    <li>2012: </li>
-    <li>2013: </li>
-    <li>2014: </li>
-    <li>2015: </li>
-    <li>2016: </li>
+    <li>1986: 24.8</li>
+    <li>1987: 27</li>
+    <li>1988: 26.4</li>
+    <li>1989: 24.7</li>
+    <li>1990: 27</li>
+    <li>1991: 25.2</li>
+    <li>1992: 26.1</li>
+    <li>1993: 24.8</li>
+    <li>1994: 25.1</li>
+    <li>1995: 21.3</li>
+    <li>1996: 24.9</li>
+    <li>1997: 23.3</li>
+    <li>1998: 25.7</li>
+    <li>1999: 24.2</li>
+    <li>2000: 24</li>
+    <li>2001: 19.9</li>
+    <li>2002: 20.2</li>
+    <li>2003: 19.5</li>
+    <li>2004: 19.7</li>
+    <li>2005: 19.3</li>
+    <li>2006: 17.6</li>
+    <li>2007: 17.1</li>
+    <li>2008: 17.6</li>
+    <li>2009: 17.3</li>
+    <li>2010: 16.9</li>
+    <li>2011: 15.1</li>
+    <li>2012: 17</li>
+    <li>2013: 15.3</li>
+    <li>2014: 15.9</li>
+    <li>2015: 16.3</li>
+    <li>2016: 15.1</li>
     <li>2017: </li>
     <li>2018: </li>
-    <li>2019: </li>
+    <li>2019: 13</li>
     <li>2020: </li>
-    <li>Historical Background: </li>
-    <li>Total suicide deaths throughout 1960-2020 in this country: </li>
-    <li>Macro Average across all countries during 1960-2020: [object Object]</li>
-    <li>Qualitative comparison between Macro Average and total suicides in this country: </li>
+    <li>Historical Background: https://daattravel.com/resources/croatia/timeline/. The fluctuating rate of suicide rates may be due to these events: 1960 Socio-economic improvements; “repressive but not oppressive” political system. 1989 Communist control weakening like in much of Eastern Europe. Croatia worried by Serbian nationalist leaders including Slobodan Milošević. 1990 Yugoslav inflation (1240% per year) another factor in Croatian separatism. 1999 Last Yugoslav war (in Serbian province of Kosovo) ends after NATO bomb Serbs. Over 2 million refugees &amp; displaced people after widespread ethnic cleansing. 2008 Global financial crisis hits Croatia hard. Public spending slashed</li>
+    <li>Total suicide deaths throughout 1960-2020 in this country: 694</li>
+    <li>Macro Average across all countries during 1960-2020: 622</li>
+    <li>Qualitative comparison between Macro Average and total suicides in this country: The total suicides in this counrty is greater than the average among all countries included from 1960 until 2020.</li>
   </ul>
   </section>
 
