--- a/public/ISL.html
+++ b/public/ISL.html
@@ -133,81 +133,81 @@
     <h1>ISL</h1>
     <div id='plotly2'></div>
     <script>
-        var data = [{
+        var stats = [{
         x: [1960, 1961, 1962,1963,1964,1965,1966,1967,1968,1969,1970,1971,1972,1973,1974,1975,1976,1977,1978,1980,1981,1982,1983,1984,1985,1986,1987,1988,1989,1990,1991,1992,1993,1994,1995,1996,1997,1998,1999,2000,2001,2002,2003,2004,2005,2006,2007,2008,2009,2010,2011,2012,2013,2014,2015,2016,2017,2018,2019,2020],
-        y: [, , ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,],
+        y: [10.8, 13.6, 11.9,10.8,12.4,16.8,24.7,23.3,10,12.7,17.7,6.6,10.7,16.6,12.9,13.1,10.9,11.3,12.4,16.4,13,7.8,10.2,20.6,21.5,15.7,18.1,18.4,16.7,9.8,16.3,15.4,11.6,11,10.4,11,13.5,14,11.5,11.3,18.1,12.8,10.4,9.9,12.6,11.6,10.9,12,12.8,12,15,8.9,11.9,16.3,14.1,12.4,12.2,9.8,9.8,11.2,12.7],
         type: 'scatter'}];
-        Plotly.newPlot('plotly2', data);
+        Plotly.newPlot('plotly2', stats);
     </script>
   </header>
   <section id="country-stats">
   <h2>Stats</h2>
   <ul>
-    <li>1960: </li>
-    <li>1961: </li>
-    <li>1962: </li>
-    <li>1963: </li>
-    <li>1964: </li>
-    <li>1965: </li>
-    <li>1966: </li>
-    <li>1967: </li>
-    <li>1968: </li>
-    <li>1969: </li>
-    <li>1970: </li>
-    <li>1971: </li>
-    <li>1972: </li>
-    <li>1973: </li>
-    <li>1974: </li>
-    <li>1975: </li>
-    <li>1976: </li>
-    <li>1977: </li>
-    <li>1978: </li>
-    <li>1979: </li>
-    <li>1980: </li>
-    <li>1981: </li>
-    <li>1982: </li>
-    <li>1983: </li>
-    <li>1984: </li>
-    <li>1985: </li>
-    <li>1986: </li>
-    <li>1987: </li>
-    <li>1988: </li>
-    <li>1989: </li>
-    <li>1990: </li>
-    <li>1991: </li>
-    <li>1992: </li>
-    <li>1993: </li>
-    <li>1994: </li>
-    <li>1995: </li>
-    <li>1996: </li>
-    <li>1997: </li>
-    <li>1998: </li>
-    <li>1999: </li>
-    <li>2000: </li>
-    <li>2001: </li>
-    <li>2002: </li>
-    <li>2003: </li>
-    <li>2004: </li>
-    <li>2005: </li>
-    <li>2006: </li>
-    <li>2007: </li>
-    <li>2008: </li>
-    <li>2009: </li>
-    <li>2010: </li>
-    <li>2011: </li>
-    <li>2012: </li>
-    <li>2013: </li>
-    <li>2014: </li>
-    <li>2015: </li>
-    <li>2016: </li>
-    <li>2017: </li>
-    <li>2018: </li>
-    <li>2019: </li>
-    <li>2020: </li>
-    <li>Historical Background: </li>
-    <li>Total suicide deaths throughout 1960-2020 in this country: </li>
-    <li>Macro Average across all countries during 1960-2020: [object Object]</li>
-    <li>Qualitative comparison between Macro Average and total suicides in this country: </li>
+    <li>1960: 10.8</li>
+    <li>1961: 13.6</li>
+    <li>1962: 11.9</li>
+    <li>1963: 10.8</li>
+    <li>1964: 12.4</li>
+    <li>1965: 16.8</li>
+    <li>1966: 24.7</li>
+    <li>1967: 23.3</li>
+    <li>1968: 10</li>
+    <li>1969: 12.7</li>
+    <li>1970: 17.7</li>
+    <li>1971: 6.6</li>
+    <li>1972: 10.7</li>
+    <li>1973: 16.6</li>
+    <li>1974: 12.9</li>
+    <li>1975: 13.1</li>
+    <li>1976: 10.9</li>
+    <li>1977: 11.3</li>
+    <li>1978: 12.4</li>
+    <li>1979: 16.4</li>
+    <li>1980: 13</li>
+    <li>1981: 7.8</li>
+    <li>1982: 10.2</li>
+    <li>1983: 20.6</li>
+    <li>1984: 21.5</li>
+    <li>1985: 15.7</li>
+    <li>1986: 18.1</li>
+    <li>1987: 18.4</li>
+    <li>1988: 16.7</li>
+    <li>1989: 9.8</li>
+    <li>1990: 16.3</li>
+    <li>1991: 15.4</li>
+    <li>1992: 11.6</li>
+    <li>1993: 11</li>
+    <li>1994: 10.4</li>
+    <li>1995: 11</li>
+    <li>1996: 13.5</li>
+    <li>1997: 14</li>
+    <li>1998: 11.5</li>
+    <li>1999: 11.3</li>
+    <li>2000: 18.1</li>
+    <li>2001: 12.8</li>
+    <li>2002: 10.4</li>
+    <li>2003: 9.9</li>
+    <li>2004: 12.6</li>
+    <li>2005: 11.6</li>
+    <li>2006: 10.9</li>
+    <li>2007: 12</li>
+    <li>2008: 12.8</li>
+    <li>2009: 12</li>
+    <li>2010: 15</li>
+    <li>2011: 8.9</li>
+    <li>2012: 11.9</li>
+    <li>2013: 16.3</li>
+    <li>2014: 14.1</li>
+    <li>2015: 12.4</li>
+    <li>2016: 12.2</li>
+    <li>2017: 17.7</li>
+    <li>2018: 9.8</li>
+    <li>2019: 11.2</li>
+    <li>2020: 12.7</li>
+    <li>Historical Background: https://www.bbc.co.uk/news/world-europe-17386859.amp. The fluctuating rate of suicide rates may be due to these events: 1958-61 - First &#34;Cod War&#34; between Iceland and UK as Iceland extends its fishing limit to 19km. 1980 - Iceland suffers from high inflation averaging 38% annually. 1985 - Iceland declares itself a nuclear-free zone. 2006 - The last US military personnel leave the Keflavik base. The US says it will defend Iceland as a Nato ally. 2011 - Economy registers first signs of growth in response to austerity programme and unemployment begins to fall fast</li>
+    <li>Total suicide deaths throughout 1960-2020 in this country: 781</li>
+    <li>Macro Average across all countries during 1960-2020: 622</li>
+    <li>Qualitative comparison between Macro Average and total suicides in this country: The total suicides in this counrty is greater than the average among all countries included from 1960 until 2020.</li>
   </ul>
   </section>
 
