--- a/public/ISR.html
+++ b/public/ISR.html
@@ -133,11 +133,11 @@
     <h1>ISR</h1>
     <div id='plotly2'></div>
     <script>
-        var data = [{
+        var stats = [{
         x: [1960, 1961, 1962,1963,1964,1965,1966,1967,1968,1969,1970,1971,1972,1973,1974,1975,1976,1977,1978,1980,1981,1982,1983,1984,1985,1986,1987,1988,1989,1990,1991,1992,1993,1994,1995,1996,1997,1998,1999,2000,2001,2002,2003,2004,2005,2006,2007,2008,2009,2010,2011,2012,2013,2014,2015,2016,2017,2018,2019,2020],
-        y: [, , ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,],
+        y: [, , ,,,,,,,,,,,,,11.8,11.9,8.9,8.1,9.6,8.8,7.6,7.1,9,7.9,8.1,9.4,9.4,9.8,11.3,9.1,10.3,9.9,9.5,10.5,8.7,7,8.3,6.8,7.4,7.5,7.5,7,7.8,7.3,7.5,6.1,5.5,5.8,6.3,7.5,6.4,6.6,5.6,5.6,5,5.6,5.6,6.2,5.7,5.7],
         type: 'scatter'}];
-        Plotly.newPlot('plotly2', data);
+        Plotly.newPlot('plotly2', stats);
     </script>
   </header>
   <section id="country-stats">
@@ -158,56 +158,56 @@
     <li>1972: </li>
     <li>1973: </li>
     <li>1974: </li>
-    <li>1975: </li>
-    <li>1976: </li>
-    <li>1977: </li>
-    <li>1978: </li>
-    <li>1979: </li>
-    <li>1980: </li>
-    <li>1981: </li>
-    <li>1982: </li>
-    <li>1983: </li>
-    <li>1984: </li>
-    <li>1985: </li>
-    <li>1986: </li>
-    <li>1987: </li>
-    <li>1988: </li>
-    <li>1989: </li>
-    <li>1990: </li>
-    <li>1991: </li>
-    <li>1992: </li>
-    <li>1993: </li>
-    <li>1994: </li>
-    <li>1995: </li>
-    <li>1996: </li>
-    <li>1997: </li>
-    <li>1998: </li>
-    <li>1999: </li>
-    <li>2000: </li>
-    <li>2001: </li>
-    <li>2002: </li>
-    <li>2003: </li>
-    <li>2004: </li>
-    <li>2005: </li>
-    <li>2006: </li>
-    <li>2007: </li>
-    <li>2008: </li>
-    <li>2009: </li>
-    <li>2010: </li>
-    <li>2011: </li>
-    <li>2012: </li>
-    <li>2013: </li>
-    <li>2014: </li>
-    <li>2015: </li>
-    <li>2016: </li>
+    <li>1975: 11.8</li>
+    <li>1976: 11.9</li>
+    <li>1977: 8.9</li>
+    <li>1978: 8.1</li>
+    <li>1979: 9.6</li>
+    <li>1980: 8.8</li>
+    <li>1981: 7.6</li>
+    <li>1982: 7.1</li>
+    <li>1983: 9</li>
+    <li>1984: 7.9</li>
+    <li>1985: 8.1</li>
+    <li>1986: 9.4</li>
+    <li>1987: 9.4</li>
+    <li>1988: 9.8</li>
+    <li>1989: 11.3</li>
+    <li>1990: 9.1</li>
+    <li>1991: 10.3</li>
+    <li>1992: 9.9</li>
+    <li>1993: 9.5</li>
+    <li>1994: 10.5</li>
+    <li>1995: 8.7</li>
+    <li>1996: 7</li>
+    <li>1997: 8.3</li>
+    <li>1998: 6.8</li>
+    <li>1999: 7.4</li>
+    <li>2000: 7.5</li>
+    <li>2001: 7.5</li>
+    <li>2002: 7</li>
+    <li>2003: 7.8</li>
+    <li>2004: 7.3</li>
+    <li>2005: 7.5</li>
+    <li>2006: 6.1</li>
+    <li>2007: 5.5</li>
+    <li>2008: 5.8</li>
+    <li>2009: 6.3</li>
+    <li>2010: 7.5</li>
+    <li>2011: 6.4</li>
+    <li>2012: 6.6</li>
+    <li>2013: 5.6</li>
+    <li>2014: 5.6</li>
+    <li>2015: 5</li>
+    <li>2016: 5.6</li>
     <li>2017: </li>
-    <li>2018: </li>
-    <li>2019: </li>
-    <li>2020: </li>
-    <li>Historical Background: </li>
-    <li>Total suicide deaths throughout 1960-2020 in this country: </li>
-    <li>Macro Average across all countries during 1960-2020: [object Object]</li>
-    <li>Qualitative comparison between Macro Average and total suicides in this country: </li>
+    <li>2018: 6.2</li>
+    <li>2019: 5.7</li>
+    <li>2020: 5.7</li>
+    <li>Historical Background: https://www.ducksters.com/geography/country/israel_history_timeline.php. The fluctuating rate of suicide rates may be due to these events: 1967 - The Six-Day War is fought between Israel and a group of Arab nations. 1973 - The Yom Kippur War takes place when Egypt and Syria attack Israel on the Jewish holy day of Yom Kippur. Israel was able to push back the Egyptian army. 1991 - The Gulf War occurs. Israel is hit by Scud missiles from Iraq</li>
+    <li>Total suicide deaths throughout 1960-2020 in this country: 338</li>
+    <li>Macro Average across all countries during 1960-2020: 622</li>
+    <li>Qualitative comparison between Macro Average and total suicides in this country: The total suicides in this counrty is lesser than the average among all countries included from 1960 until 2020.</li>
   </ul>
   </section>
 
