--- a/public/ITA.html
+++ b/public/ITA.html
@@ -133,81 +133,81 @@
     <h1>ITA</h1>
     <div id='plotly2'></div>
     <script>
-        var data = [{
+        var stats = [{
         x: [1960, 1961, 1962,1963,1964,1965,1966,1967,1968,1969,1970,1971,1972,1973,1974,1975,1976,1977,1978,1980,1981,1982,1983,1984,1985,1986,1987,1988,1989,1990,1991,1992,1993,1994,1995,1996,1997,1998,1999,2000,2001,2002,2003,2004,2005,2006,2007,2008,2009,2010,2011,2012,2013,2014,2015,2016,2017,2018,2019,2020],
-        y: [, , ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,],
+        y: [7.6, 6.8, 6.7,6.5,6.8,6.8,6.4,6.8,6.6,6.6,7,7,7,7,6.4,6.6,6.6,7.3,7.4,7.9,8.2,7.7,8.4,8.5,8.7,9.2,8.9,8.5,8.2,7.9,7.9,8,8.1,8.3,7.9,8,8.1,8,7.6,6.9,6.9,6.7,6.7,6.6,6.4,6,5.8,5.8,6,6.1,6,6.4,6.5,6.5,6.2,5.9,5.7,5.8,,,],
         type: 'scatter'}];
-        Plotly.newPlot('plotly2', data);
+        Plotly.newPlot('plotly2', stats);
     </script>
   </header>
   <section id="country-stats">
   <h2>Stats</h2>
   <ul>
-    <li>1960: </li>
-    <li>1961: </li>
-    <li>1962: </li>
-    <li>1963: </li>
-    <li>1964: </li>
-    <li>1965: </li>
-    <li>1966: </li>
-    <li>1967: </li>
-    <li>1968: </li>
-    <li>1969: </li>
-    <li>1970: </li>
-    <li>1971: </li>
-    <li>1972: </li>
-    <li>1973: </li>
-    <li>1974: </li>
-    <li>1975: </li>
-    <li>1976: </li>
-    <li>1977: </li>
-    <li>1978: </li>
-    <li>1979: </li>
-    <li>1980: </li>
-    <li>1981: </li>
-    <li>1982: </li>
-    <li>1983: </li>
-    <li>1984: </li>
-    <li>1985: </li>
-    <li>1986: </li>
-    <li>1987: </li>
-    <li>1988: </li>
-    <li>1989: </li>
-    <li>1990: </li>
-    <li>1991: </li>
-    <li>1992: </li>
-    <li>1993: </li>
-    <li>1994: </li>
-    <li>1995: </li>
-    <li>1996: </li>
-    <li>1997: </li>
-    <li>1998: </li>
-    <li>1999: </li>
-    <li>2000: </li>
-    <li>2001: </li>
-    <li>2002: </li>
-    <li>2003: </li>
-    <li>2004: </li>
-    <li>2005: </li>
-    <li>2006: </li>
-    <li>2007: </li>
-    <li>2008: </li>
-    <li>2009: </li>
-    <li>2010: </li>
-    <li>2011: </li>
-    <li>2012: </li>
-    <li>2013: </li>
-    <li>2014: </li>
-    <li>2015: </li>
-    <li>2016: </li>
-    <li>2017: </li>
+    <li>1960: 7.6</li>
+    <li>1961: 6.8</li>
+    <li>1962: 6.7</li>
+    <li>1963: 6.5</li>
+    <li>1964: 6.8</li>
+    <li>1965: 6.8</li>
+    <li>1966: 6.4</li>
+    <li>1967: 6.8</li>
+    <li>1968: 6.6</li>
+    <li>1969: 6.6</li>
+    <li>1970: 7</li>
+    <li>1971: 7</li>
+    <li>1972: 7</li>
+    <li>1973: 7</li>
+    <li>1974: 6.4</li>
+    <li>1975: 6.6</li>
+    <li>1976: 6.6</li>
+    <li>1977: 7.3</li>
+    <li>1978: 7.4</li>
+    <li>1979: 7.9</li>
+    <li>1980: 8.2</li>
+    <li>1981: 7.7</li>
+    <li>1982: 8.4</li>
+    <li>1983: 8.5</li>
+    <li>1984: 8.7</li>
+    <li>1985: 9.2</li>
+    <li>1986: 8.9</li>
+    <li>1987: 8.5</li>
+    <li>1988: 8.2</li>
+    <li>1989: 7.9</li>
+    <li>1990: 7.9</li>
+    <li>1991: 8</li>
+    <li>1992: 8.1</li>
+    <li>1993: 8.3</li>
+    <li>1994: 7.9</li>
+    <li>1995: 8</li>
+    <li>1996: 8.1</li>
+    <li>1997: 8</li>
+    <li>1998: 7.6</li>
+    <li>1999: 6.9</li>
+    <li>2000: 6.9</li>
+    <li>2001: 6.7</li>
+    <li>2002: 6.7</li>
+    <li>2003: 6.6</li>
+    <li>2004: 6.4</li>
+    <li>2005: 6</li>
+    <li>2006: 5.8</li>
+    <li>2007: 5.8</li>
+    <li>2008: 6</li>
+    <li>2009: 6.1</li>
+    <li>2010: 6</li>
+    <li>2011: 6.4</li>
+    <li>2012: 6.5</li>
+    <li>2013: 6.5</li>
+    <li>2014: 6.2</li>
+    <li>2015: 5.9</li>
+    <li>2016: 5.7</li>
+    <li>2017: 7</li>
     <li>2018: </li>
     <li>2019: </li>
     <li>2020: </li>
-    <li>Historical Background: </li>
-    <li>Total suicide deaths throughout 1960-2020 in this country: </li>
-    <li>Macro Average across all countries during 1960-2020: [object Object]</li>
-    <li>Qualitative comparison between Macro Average and total suicides in this country: </li>
+    <li>Historical Background: https://www.ducksters.com/geography/country/italy_history_timeline.php. The fluctuating rate of suicide rates may be due to these events: 1955 - Italy joins the United Nations. 1960 - The summer Olympics are held in Rome. 2002 - The Euro becomes the official currency of Italy</li>
+    <li>Total suicide deaths throughout 1960-2020 in this country: 385</li>
+    <li>Macro Average across all countries during 1960-2020: 622</li>
+    <li>Qualitative comparison between Macro Average and total suicides in this country: The total suicides in this counrty is lesser than the average among all countries included from 1960 until 2020.</li>
   </ul>
   </section>
 
