--- a/public/KOR.html
+++ b/public/KOR.html
@@ -133,11 +133,11 @@
     <h1>KOR</h1>
     <div id='plotly2'></div>
     <script>
-        var data = [{
+        var stats = [{
         x: [1960, 1961, 1962,1963,1964,1965,1966,1967,1968,1969,1970,1971,1972,1973,1974,1975,1976,1977,1978,1980,1981,1982,1983,1984,1985,1986,1987,1988,1989,1990,1991,1992,1993,1994,1995,1996,1997,1998,1999,2000,2001,2002,2003,2004,2005,2006,2007,2008,2009,2010,2011,2012,2013,2014,2015,2016,2017,2018,2019,2020],
-        y: [, , ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,],
+        y: [, , ,,,,,,,,,,,,,,,,,,,,,,,11.5,10.6,9.9,8.6,8.8,9,8.6,9.7,11.6,11.9,12.7,15.2,16.3,22.7,18.9,17.5,18.9,23.9,29.7,31.2,31.6,27.8,30.3,30.3,35.3,35,34.7,30.3,29.8,27.6,26.8,25.5,23.8,25.5,25.4,24.1],
         type: 'scatter'}];
-        Plotly.newPlot('plotly2', data);
+        Plotly.newPlot('plotly2', stats);
     </script>
   </header>
   <section id="country-stats">
@@ -168,46 +168,46 @@
     <li>1982: </li>
     <li>1983: </li>
     <li>1984: </li>
-    <li>1985: </li>
-    <li>1986: </li>
-    <li>1987: </li>
-    <li>1988: </li>
-    <li>1989: </li>
-    <li>1990: </li>
-    <li>1991: </li>
-    <li>1992: </li>
-    <li>1993: </li>
-    <li>1994: </li>
-    <li>1995: </li>
-    <li>1996: </li>
-    <li>1997: </li>
-    <li>1998: </li>
-    <li>1999: </li>
-    <li>2000: </li>
-    <li>2001: </li>
-    <li>2002: </li>
-    <li>2003: </li>
-    <li>2004: </li>
-    <li>2005: </li>
-    <li>2006: </li>
-    <li>2007: </li>
-    <li>2008: </li>
-    <li>2009: </li>
-    <li>2010: </li>
-    <li>2011: </li>
-    <li>2012: </li>
-    <li>2013: </li>
-    <li>2014: </li>
-    <li>2015: </li>
-    <li>2016: </li>
+    <li>1985: 11.5</li>
+    <li>1986: 10.6</li>
+    <li>1987: 9.9</li>
+    <li>1988: 8.6</li>
+    <li>1989: 8.8</li>
+    <li>1990: 9</li>
+    <li>1991: 8.6</li>
+    <li>1992: 9.7</li>
+    <li>1993: 11.6</li>
+    <li>1994: 11.9</li>
+    <li>1995: 12.7</li>
+    <li>1996: 15.2</li>
+    <li>1997: 16.3</li>
+    <li>1998: 22.7</li>
+    <li>1999: 18.9</li>
+    <li>2000: 17.5</li>
+    <li>2001: 18.9</li>
+    <li>2002: 23.9</li>
+    <li>2003: 29.7</li>
+    <li>2004: 31.2</li>
+    <li>2005: 31.6</li>
+    <li>2006: 27.8</li>
+    <li>2007: 30.3</li>
+    <li>2008: 30.3</li>
+    <li>2009: 35.3</li>
+    <li>2010: 35</li>
+    <li>2011: 34.7</li>
+    <li>2012: 30.3</li>
+    <li>2013: 29.8</li>
+    <li>2014: 27.6</li>
+    <li>2015: 26.8</li>
+    <li>2016: 25.5</li>
     <li>2017: </li>
-    <li>2018: </li>
-    <li>2019: </li>
-    <li>2020: </li>
-    <li>Historical Background: </li>
-    <li>Total suicide deaths throughout 1960-2020 in this country: </li>
-    <li>Macro Average across all countries during 1960-2020: [object Object]</li>
-    <li>Qualitative comparison between Macro Average and total suicides in this country: </li>
+    <li>2018: 25.5</li>
+    <li>2019: 25.4</li>
+    <li>2020: 24.1</li>
+    <li>Historical Background: https://www.insightguides.com/destinations/asia-pacific/south-korea/historical-highlights. The fluctuating rate of suicide rates may be due to these events: 1962 - Yun’s government falls. Major General Park Chung-hee heads military government until assassination in 1979. 1980 - Major General Chun Doo-hwan becomes president. Military crushes citizens’ -democratic movement in Gwangju. 1997 - Korea battered by Asian economic crisis. 2006 - Six-party talks with North Korea over the nuclear issue fail to make significant progress. 2008 - Economy seriously damaged by global downturn</li>
+    <li>Total suicide deaths throughout 1960-2020 in this country: 751</li>
+    <li>Macro Average across all countries during 1960-2020: 622</li>
+    <li>Qualitative comparison between Macro Average and total suicides in this country: The total suicides in this counrty is greater than the average among all countries included from 1960 until 2020.</li>
   </ul>
   </section>
 
