--- a/public/LVA.html
+++ b/public/LVA.html
@@ -133,11 +133,11 @@
     <h1>LVA</h1>
     <div id='plotly2'></div>
     <script>
-        var data = [{
+        var stats = [{
         x: [1960, 1961, 1962,1963,1964,1965,1966,1967,1968,1969,1970,1971,1972,1973,1974,1975,1976,1977,1978,1980,1981,1982,1983,1984,1985,1986,1987,1988,1989,1990,1991,1992,1993,1994,1995,1996,1997,1998,1999,2000,2001,2002,2003,2004,2005,2006,2007,2008,2009,2010,2011,2012,2013,2014,2015,2016,2017,2018,2019,2020],
-        y: [, , ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,],
+        y: [, , ,,,,,,,,,,,,,,,,,,35.2,35.8,37.5,36,37,31.9,27.4,25.9,25.2,28.5,28.4,30.7,37.6,45.2,42.9,43.1,38.9,37.6,35.6,32.7,33.8,30.9,29.7,26.7,24.8,25.1,21.6,20.4,23.7,23.6,20.1,20.5,20.9,18.2,18.4,18.6,17.7,17.3,14.7,14.4,14.9],
         type: 'scatter'}];
-        Plotly.newPlot('plotly2', data);
+        Plotly.newPlot('plotly2', stats);
     </script>
   </header>
   <section id="country-stats">
@@ -163,51 +163,51 @@
     <li>1977: </li>
     <li>1978: </li>
     <li>1979: </li>
-    <li>1980: </li>
-    <li>1981: </li>
-    <li>1982: </li>
-    <li>1983: </li>
-    <li>1984: </li>
-    <li>1985: </li>
-    <li>1986: </li>
-    <li>1987: </li>
-    <li>1988: </li>
-    <li>1989: </li>
-    <li>1990: </li>
-    <li>1991: </li>
-    <li>1992: </li>
-    <li>1993: </li>
-    <li>1994: </li>
-    <li>1995: </li>
-    <li>1996: </li>
-    <li>1997: </li>
-    <li>1998: </li>
-    <li>1999: </li>
-    <li>2000: </li>
-    <li>2001: </li>
-    <li>2002: </li>
-    <li>2003: </li>
-    <li>2004: </li>
-    <li>2005: </li>
-    <li>2006: </li>
-    <li>2007: </li>
-    <li>2008: </li>
-    <li>2009: </li>
-    <li>2010: </li>
-    <li>2011: </li>
-    <li>2012: </li>
-    <li>2013: </li>
-    <li>2014: </li>
-    <li>2015: </li>
-    <li>2016: </li>
+    <li>1980: 35.2</li>
+    <li>1981: 35.8</li>
+    <li>1982: 37.5</li>
+    <li>1983: 36</li>
+    <li>1984: 37</li>
+    <li>1985: 31.9</li>
+    <li>1986: 27.4</li>
+    <li>1987: 25.9</li>
+    <li>1988: 25.2</li>
+    <li>1989: 28.5</li>
+    <li>1990: 28.4</li>
+    <li>1991: 30.7</li>
+    <li>1992: 37.6</li>
+    <li>1993: 45.2</li>
+    <li>1994: 42.9</li>
+    <li>1995: 43.1</li>
+    <li>1996: 38.9</li>
+    <li>1997: 37.6</li>
+    <li>1998: 35.6</li>
+    <li>1999: 32.7</li>
+    <li>2000: 33.8</li>
+    <li>2001: 30.9</li>
+    <li>2002: 29.7</li>
+    <li>2003: 26.7</li>
+    <li>2004: 24.8</li>
+    <li>2005: 25.1</li>
+    <li>2006: 21.6</li>
+    <li>2007: 20.4</li>
+    <li>2008: 23.7</li>
+    <li>2009: 23.6</li>
+    <li>2010: 20.1</li>
+    <li>2011: 20.5</li>
+    <li>2012: 20.9</li>
+    <li>2013: 18.2</li>
+    <li>2014: 18.4</li>
+    <li>2015: 18.6</li>
+    <li>2016: 17.7</li>
     <li>2017: </li>
-    <li>2018: </li>
-    <li>2019: </li>
-    <li>2020: </li>
-    <li>Historical Background: </li>
-    <li>Total suicide deaths throughout 1960-2020 in this country: </li>
-    <li>Macro Average across all countries during 1960-2020: [object Object]</li>
-    <li>Qualitative comparison between Macro Average and total suicides in this country: </li>
+    <li>2018: 14.7</li>
+    <li>2019: 14.4</li>
+    <li>2020: 14.9</li>
+    <li>Historical Background: https://daattravel.com/resources/latvia/timeline/. The fluctuating rate of suicide rates may be due to these events: 1959 - Many Russians move to Latvia; Russian language officially favored. Jewish population increases to 36000 with arrival of some Russian Jews. Economy based on machine-manufacturing for Soviets. 1989 - Hands Across the Baltics: Non-violent independence protests. 1991 - Communist rule in USSR collapses. Latvia declares independence. Democratic government confronted with significant economic problems. 2009 - Severe recession temporarily interrupts period of rapid economic growth</li>
+    <li>Total suicide deaths throughout 1960-2020 in this country: 1127</li>
+    <li>Macro Average across all countries during 1960-2020: 622</li>
+    <li>Qualitative comparison between Macro Average and total suicides in this country: The total suicides in this counrty is greater than the average among all countries included from 1960 until 2020.</li>
   </ul>
   </section>
 
