--- a/public/NLD.html
+++ b/public/NLD.html
@@ -133,81 +133,81 @@
     <h1>NLD</h1>
     <div id='plotly2'></div>
     <script>
-        var data = [{
+        var stats = [{
         x: [1960, 1961, 1962,1963,1964,1965,1966,1967,1968,1969,1970,1971,1972,1973,1974,1975,1976,1977,1978,1980,1981,1982,1983,1984,1985,1986,1987,1988,1989,1990,1991,1992,1993,1994,1995,1996,1997,1998,1999,2000,2001,2002,2003,2004,2005,2006,2007,2008,2009,2010,2011,2012,2013,2014,2015,2016,2017,2018,2019,2020],
-        y: [, , ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,],
+        y: [9.3, 9.2, 9.1,8.6,8.9,9.7,9.6,8.3,8.4,9.6,10.6,10.7,10.6,10.8,11.5,10.9,11.6,11.1,11.5,12.5,11.8,11.7,12.4,13.8,13.9,12.4,12.1,12,11.2,10.9,10.3,11.3,11,10.5,10.6,10,10.4,10.3,9.9,9.8,9.6,9.3,9.8,9.4,9.3,9.6,9.3,8.2,8.6,9.1,9.4,9.7,10.3,10.8,10.6,10.7,10.8,10.8,10.2,10,10],
         type: 'scatter'}];
-        Plotly.newPlot('plotly2', data);
+        Plotly.newPlot('plotly2', stats);
     </script>
   </header>
   <section id="country-stats">
   <h2>Stats</h2>
   <ul>
-    <li>1960: </li>
-    <li>1961: </li>
-    <li>1962: </li>
-    <li>1963: </li>
-    <li>1964: </li>
-    <li>1965: </li>
-    <li>1966: </li>
-    <li>1967: </li>
-    <li>1968: </li>
-    <li>1969: </li>
-    <li>1970: </li>
-    <li>1971: </li>
-    <li>1972: </li>
-    <li>1973: </li>
-    <li>1974: </li>
-    <li>1975: </li>
-    <li>1976: </li>
-    <li>1977: </li>
-    <li>1978: </li>
-    <li>1979: </li>
-    <li>1980: </li>
-    <li>1981: </li>
-    <li>1982: </li>
-    <li>1983: </li>
-    <li>1984: </li>
-    <li>1985: </li>
-    <li>1986: </li>
-    <li>1987: </li>
-    <li>1988: </li>
-    <li>1989: </li>
-    <li>1990: </li>
-    <li>1991: </li>
-    <li>1992: </li>
-    <li>1993: </li>
-    <li>1994: </li>
-    <li>1995: </li>
-    <li>1996: </li>
-    <li>1997: </li>
-    <li>1998: </li>
-    <li>1999: </li>
-    <li>2000: </li>
-    <li>2001: </li>
-    <li>2002: </li>
-    <li>2003: </li>
-    <li>2004: </li>
-    <li>2005: </li>
-    <li>2006: </li>
-    <li>2007: </li>
-    <li>2008: </li>
-    <li>2009: </li>
-    <li>2010: </li>
-    <li>2011: </li>
-    <li>2012: </li>
-    <li>2013: </li>
-    <li>2014: </li>
-    <li>2015: </li>
-    <li>2016: </li>
-    <li>2017: </li>
-    <li>2018: </li>
-    <li>2019: </li>
-    <li>2020: </li>
-    <li>Historical Background: </li>
-    <li>Total suicide deaths throughout 1960-2020 in this country: </li>
-    <li>Macro Average across all countries during 1960-2020: [object Object]</li>
-    <li>Qualitative comparison between Macro Average and total suicides in this country: </li>
+    <li>1960: 9.3</li>
+    <li>1961: 9.2</li>
+    <li>1962: 9.1</li>
+    <li>1963: 8.6</li>
+    <li>1964: 8.9</li>
+    <li>1965: 9.7</li>
+    <li>1966: 9.6</li>
+    <li>1967: 8.3</li>
+    <li>1968: 8.4</li>
+    <li>1969: 9.6</li>
+    <li>1970: 10.6</li>
+    <li>1971: 10.7</li>
+    <li>1972: 10.6</li>
+    <li>1973: 10.8</li>
+    <li>1974: 11.5</li>
+    <li>1975: 10.9</li>
+    <li>1976: 11.6</li>
+    <li>1977: 11.1</li>
+    <li>1978: 11.5</li>
+    <li>1979: 12.5</li>
+    <li>1980: 11.8</li>
+    <li>1981: 11.7</li>
+    <li>1982: 12.4</li>
+    <li>1983: 13.8</li>
+    <li>1984: 13.9</li>
+    <li>1985: 12.4</li>
+    <li>1986: 12.1</li>
+    <li>1987: 12</li>
+    <li>1988: 11.2</li>
+    <li>1989: 10.9</li>
+    <li>1990: 10.3</li>
+    <li>1991: 11.3</li>
+    <li>1992: 11</li>
+    <li>1993: 10.5</li>
+    <li>1994: 10.6</li>
+    <li>1995: 10</li>
+    <li>1996: 10.4</li>
+    <li>1997: 10.3</li>
+    <li>1998: 9.9</li>
+    <li>1999: 9.8</li>
+    <li>2000: 9.6</li>
+    <li>2001: 9.3</li>
+    <li>2002: 9.8</li>
+    <li>2003: 9.4</li>
+    <li>2004: 9.3</li>
+    <li>2005: 9.6</li>
+    <li>2006: 9.3</li>
+    <li>2007: 8.2</li>
+    <li>2008: 8.6</li>
+    <li>2009: 9.1</li>
+    <li>2010: 9.4</li>
+    <li>2011: 9.7</li>
+    <li>2012: 10.3</li>
+    <li>2013: 10.8</li>
+    <li>2014: 10.6</li>
+    <li>2015: 10.7</li>
+    <li>2016: 10.8</li>
+    <li>2017: 10.6</li>
+    <li>2018: 10.2</li>
+    <li>2019: 10</li>
+    <li>2020: 10</li>
+    <li>Historical Background: ​​https://www.ducksters.com/geography/country/netherlands_history_timeline.php. The fluctuating rate of suicide rates may be due to these events: 1953 - The North Sea Flood kills over 1800 people. The government starts construction on the Delta Works to prevent future flooding. 1975 - Independence is granted to the Dutch colony of Surinam. 1995 - A great flood causes a state of emergency and hundreds of thousands of people are evacuated. 1997 - The Delta Works are completed</li>
+    <li>Total suicide deaths throughout 1960-2020 in this country: 605</li>
+    <li>Macro Average across all countries during 1960-2020: 622</li>
+    <li>Qualitative comparison between Macro Average and total suicides in this country: The total suicides in this counrty is lesser than the average among all countries included from 1960 until 2020.</li>
   </ul>
   </section>
 
