--- a/public/NOR.html
+++ b/public/NOR.html
@@ -133,81 +133,81 @@
     <h1>NOR</h1>
     <div id='plotly2'></div>
     <script>
-        var data = [{
+        var stats = [{
         x: [1960, 1961, 1962,1963,1964,1965,1966,1967,1968,1969,1970,1971,1972,1973,1974,1975,1976,1977,1978,1980,1981,1982,1983,1984,1985,1986,1987,1988,1989,1990,1991,1992,1993,1994,1995,1996,1997,1998,1999,2000,2001,2002,2003,2004,2005,2006,2007,2008,2009,2010,2011,2012,2013,2014,2015,2016,2017,2018,2019,2020],
-        y: [, , ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,],
+        y: [7.1, 7.5, 8.8,9.1,8.3,8.7,7.8,7.7,9,9.1,9.4,9.1,10,9.6,11.5,10.9,11.8,12.5,12.6,13.3,13.4,13.8,15.1,15.9,15.3,14.8,14.7,16.3,17.5,16.1,16,16.5,14.7,13.9,12.6,12.9,12,12.6,12.7,13.5,12.4,12.6,11.2,11.3,11.9,11.7,11.7,10.6,10.7,12.1,11.4,12.2,10.4,11,10.8,11.4,11.8,,,,],
         type: 'scatter'}];
-        Plotly.newPlot('plotly2', data);
+        Plotly.newPlot('plotly2', stats);
     </script>
   </header>
   <section id="country-stats">
   <h2>Stats</h2>
   <ul>
-    <li>1960: </li>
-    <li>1961: </li>
-    <li>1962: </li>
-    <li>1963: </li>
-    <li>1964: </li>
-    <li>1965: </li>
-    <li>1966: </li>
-    <li>1967: </li>
-    <li>1968: </li>
-    <li>1969: </li>
-    <li>1970: </li>
-    <li>1971: </li>
-    <li>1972: </li>
-    <li>1973: </li>
-    <li>1974: </li>
-    <li>1975: </li>
-    <li>1976: </li>
-    <li>1977: </li>
-    <li>1978: </li>
-    <li>1979: </li>
-    <li>1980: </li>
-    <li>1981: </li>
-    <li>1982: </li>
-    <li>1983: </li>
-    <li>1984: </li>
-    <li>1985: </li>
-    <li>1986: </li>
-    <li>1987: </li>
-    <li>1988: </li>
-    <li>1989: </li>
-    <li>1990: </li>
-    <li>1991: </li>
-    <li>1992: </li>
-    <li>1993: </li>
-    <li>1994: </li>
-    <li>1995: </li>
-    <li>1996: </li>
-    <li>1997: </li>
-    <li>1998: </li>
-    <li>1999: </li>
-    <li>2000: </li>
-    <li>2001: </li>
-    <li>2002: </li>
-    <li>2003: </li>
-    <li>2004: </li>
-    <li>2005: </li>
-    <li>2006: </li>
-    <li>2007: </li>
-    <li>2008: </li>
-    <li>2009: </li>
-    <li>2010: </li>
-    <li>2011: </li>
-    <li>2012: </li>
-    <li>2013: </li>
-    <li>2014: </li>
-    <li>2015: </li>
-    <li>2016: </li>
-    <li>2017: </li>
+    <li>1960: 7.1</li>
+    <li>1961: 7.5</li>
+    <li>1962: 8.8</li>
+    <li>1963: 9.1</li>
+    <li>1964: 8.3</li>
+    <li>1965: 8.7</li>
+    <li>1966: 7.8</li>
+    <li>1967: 7.7</li>
+    <li>1968: 9</li>
+    <li>1969: 9.1</li>
+    <li>1970: 9.4</li>
+    <li>1971: 9.1</li>
+    <li>1972: 10</li>
+    <li>1973: 9.6</li>
+    <li>1974: 11.5</li>
+    <li>1975: 10.9</li>
+    <li>1976: 11.8</li>
+    <li>1977: 12.5</li>
+    <li>1978: 12.6</li>
+    <li>1979: 13.3</li>
+    <li>1980: 13.4</li>
+    <li>1981: 13.8</li>
+    <li>1982: 15.1</li>
+    <li>1983: 15.9</li>
+    <li>1984: 15.3</li>
+    <li>1985: 14.8</li>
+    <li>1986: 14.7</li>
+    <li>1987: 16.3</li>
+    <li>1988: 17.5</li>
+    <li>1989: 16.1</li>
+    <li>1990: 16</li>
+    <li>1991: 16.5</li>
+    <li>1992: 14.7</li>
+    <li>1993: 13.9</li>
+    <li>1994: 12.6</li>
+    <li>1995: 12.9</li>
+    <li>1996: 12</li>
+    <li>1997: 12.6</li>
+    <li>1998: 12.7</li>
+    <li>1999: 13.5</li>
+    <li>2000: 12.4</li>
+    <li>2001: 12.6</li>
+    <li>2002: 11.2</li>
+    <li>2003: 11.3</li>
+    <li>2004: 11.9</li>
+    <li>2005: 11.7</li>
+    <li>2006: 11.7</li>
+    <li>2007: 10.6</li>
+    <li>2008: 10.7</li>
+    <li>2009: 12.1</li>
+    <li>2010: 11.4</li>
+    <li>2011: 12.2</li>
+    <li>2012: 10.4</li>
+    <li>2013: 11</li>
+    <li>2014: 10.8</li>
+    <li>2015: 11.4</li>
+    <li>2016: 11.8</li>
+    <li>2017: 9.4</li>
     <li>2018: </li>
     <li>2019: </li>
     <li>2020: </li>
-    <li>Historical Background: </li>
-    <li>Total suicide deaths throughout 1960-2020 in this country: </li>
-    <li>Macro Average across all countries during 1960-2020: [object Object]</li>
-    <li>Qualitative comparison between Macro Average and total suicides in this country: </li>
+    <li>Historical Background: https://www.bbc.com/news/world-europe-17746861. The fluctuating rate of suicide rates may be due to these events: 1970s - Exploitation of oil and gas deposits begins. 1994 - Norwegians reject membership of the European Union in a referendum for a second time</li>
+    <li>Total suicide deaths throughout 1960-2020 in this country: 652</li>
+    <li>Macro Average across all countries during 1960-2020: 622</li>
+    <li>Qualitative comparison between Macro Average and total suicides in this country: The total suicides in this counrty is greater than the average among all countries included from 1960 until 2020.</li>
   </ul>
   </section>
 
