--- a/public/PER.html
+++ b/public/PER.html
@@ -133,11 +133,11 @@
     <h1>PER</h1>
     <div id='plotly2'></div>
     <script>
-        var data = [{
+        var stats = [{
         x: [1960, 1961, 1962,1963,1964,1965,1966,1967,1968,1969,1970,1971,1972,1973,1974,1975,1976,1977,1978,1980,1981,1982,1983,1984,1985,1986,1987,1988,1989,1990,1991,1992,1993,1994,1995,1996,1997,1998,1999,2000,2001,2002,2003,2004,2005,2006,2007,2008,2009,2010,2011,2012,2013,2014,2015,2016,2017,2018,2019,2020],
-        y: [, , ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,],
+        y: [, , ,,,,,,,,,,,,,,,,,,,,,1,,,1.2,1.2,0.7,0.8,0.7,0.4,1.3,,1.8,2,2,1.4,1.5,1,1,1,1,1,1,0.8,0.9,1.6,1.5,0.5,1,1.8,2.3,1.2,1.4,0.9,1.4,1.3,1.7,,],
         type: 'scatter'}];
-        Plotly.newPlot('plotly2', data);
+        Plotly.newPlot('plotly2', stats);
     </script>
   </header>
   <section id="country-stats">
@@ -166,48 +166,48 @@
     <li>1980: </li>
     <li>1981: </li>
     <li>1982: </li>
-    <li>1983: </li>
+    <li>1983: 1</li>
     <li>1984: </li>
     <li>1985: </li>
-    <li>1986: </li>
-    <li>1987: </li>
-    <li>1988: </li>
-    <li>1989: </li>
-    <li>1990: </li>
-    <li>1991: </li>
-    <li>1992: </li>
+    <li>1986: 1.2</li>
+    <li>1987: 1.2</li>
+    <li>1988: 0.7</li>
+    <li>1989: 0.8</li>
+    <li>1990: 0.7</li>
+    <li>1991: 0.4</li>
+    <li>1992: 1.3</li>
     <li>1993: </li>
-    <li>1994: </li>
-    <li>1995: </li>
-    <li>1996: </li>
-    <li>1997: </li>
-    <li>1998: </li>
-    <li>1999: </li>
-    <li>2000: </li>
-    <li>2001: </li>
-    <li>2002: </li>
-    <li>2003: </li>
-    <li>2004: </li>
-    <li>2005: </li>
-    <li>2006: </li>
-    <li>2007: </li>
-    <li>2008: </li>
-    <li>2009: </li>
-    <li>2010: </li>
-    <li>2011: </li>
-    <li>2012: </li>
-    <li>2013: </li>
-    <li>2014: </li>
-    <li>2015: </li>
-    <li>2016: </li>
+    <li>1994: 1.8</li>
+    <li>1995: 2</li>
+    <li>1996: 2</li>
+    <li>1997: 1.4</li>
+    <li>1998: 1.5</li>
+    <li>1999: 1</li>
+    <li>2000: 1</li>
+    <li>2001: 1</li>
+    <li>2002: 1</li>
+    <li>2003: 1</li>
+    <li>2004: 1</li>
+    <li>2005: 0.8</li>
+    <li>2006: 0.9</li>
+    <li>2007: 1.6</li>
+    <li>2008: 1.5</li>
+    <li>2009: 0.5</li>
+    <li>2010: 1</li>
+    <li>2011: 1.8</li>
+    <li>2012: 2.3</li>
+    <li>2013: 1.2</li>
+    <li>2014: 1.4</li>
+    <li>2015: 0.9</li>
+    <li>2016: 1.4</li>
     <li>2017: </li>
-    <li>2018: </li>
+    <li>2018: 1.7</li>
     <li>2019: </li>
     <li>2020: </li>
-    <li>Historical Background: </li>
-    <li>Total suicide deaths throughout 1960-2020 in this country: </li>
-    <li>Macro Average across all countries during 1960-2020: [object Object]</li>
-    <li>Qualitative comparison between Macro Average and total suicides in this country: </li>
+    <li>Historical Background:  http://www.discover-peru.org/peru-history-timeline/. The fluctuating rate of suicide rates may be due to these events: 1968 – Coup d’état by Juan Velasco Alvarado. Large scale nationalizations of key industries. 1975 – Coup d’état by Morales Bermudez. 1983 – El Niño caused extensive flooding in the north of the country and drought in the interior. Large damage to the economy. 1990 – First government of Alberto Fujimori. Restored market based economy and decreased inflation from 400% to almost 0%</li>
+    <li>Total suicide deaths throughout 1960-2020 in this country: 28</li>
+    <li>Macro Average across all countries during 1960-2020: 622</li>
+    <li>Qualitative comparison between Macro Average and total suicides in this country: The total suicides in this counrty is lesser than the average among all countries included from 1960 until 2020.</li>
   </ul>
   </section>
 
