--- a/public/POL.html
+++ b/public/POL.html
@@ -133,81 +133,81 @@
     <h1>POL</h1>
     <div id='plotly2'></div>
     <script>
-        var data = [{
+        var stats = [{
         x: [1960, 1961, 1962,1963,1964,1965,1966,1967,1968,1969,1970,1971,1972,1973,1974,1975,1976,1977,1978,1980,1981,1982,1983,1984,1985,1986,1987,1988,1989,1990,1991,1992,1993,1994,1995,1996,1997,1998,1999,2000,2001,2002,2003,2004,2005,2006,2007,2008,2009,2010,2011,2012,2013,2014,2015,2016,2017,2018,2019,2020],
-        y: [, , ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,],
+        y: [10.1, 10.7, 11.5,10.5,10.8,11.3,12.1,12.2,12.7,13.1,13.4,13.5,13.5,13.3,12.7,12.6,13.4,13.7,14.5,13.9,,,,13.5,15.4,14.8,14.6,14.9,13.7,12.7,14.5,15.5,16.5,16.1,15.7,15.5,15.2,,,15.5,15.8,15.7,15.8,15.4,15.9,15.8,15.1,13.7,14.7,16.7,16.3,15.6,16.2,15.8,15.1,13.7,11.9,11.3,11.3,11.6,],
         type: 'scatter'}];
-        Plotly.newPlot('plotly2', data);
+        Plotly.newPlot('plotly2', stats);
     </script>
   </header>
   <section id="country-stats">
   <h2>Stats</h2>
   <ul>
-    <li>1960: </li>
-    <li>1961: </li>
-    <li>1962: </li>
-    <li>1963: </li>
-    <li>1964: </li>
-    <li>1965: </li>
-    <li>1966: </li>
-    <li>1967: </li>
-    <li>1968: </li>
-    <li>1969: </li>
-    <li>1970: </li>
-    <li>1971: </li>
-    <li>1972: </li>
-    <li>1973: </li>
-    <li>1974: </li>
-    <li>1975: </li>
-    <li>1976: </li>
-    <li>1977: </li>
-    <li>1978: </li>
-    <li>1979: </li>
+    <li>1960: 10.1</li>
+    <li>1961: 10.7</li>
+    <li>1962: 11.5</li>
+    <li>1963: 10.5</li>
+    <li>1964: 10.8</li>
+    <li>1965: 11.3</li>
+    <li>1966: 12.1</li>
+    <li>1967: 12.2</li>
+    <li>1968: 12.7</li>
+    <li>1969: 13.1</li>
+    <li>1970: 13.4</li>
+    <li>1971: 13.5</li>
+    <li>1972: 13.5</li>
+    <li>1973: 13.3</li>
+    <li>1974: 12.7</li>
+    <li>1975: 12.6</li>
+    <li>1976: 13.4</li>
+    <li>1977: 13.7</li>
+    <li>1978: 14.5</li>
+    <li>1979: 13.9</li>
     <li>1980: </li>
     <li>1981: </li>
     <li>1982: </li>
-    <li>1983: </li>
-    <li>1984: </li>
-    <li>1985: </li>
-    <li>1986: </li>
-    <li>1987: </li>
-    <li>1988: </li>
-    <li>1989: </li>
-    <li>1990: </li>
-    <li>1991: </li>
-    <li>1992: </li>
-    <li>1993: </li>
-    <li>1994: </li>
-    <li>1995: </li>
-    <li>1996: </li>
+    <li>1983: 13.5</li>
+    <li>1984: 15.4</li>
+    <li>1985: 14.8</li>
+    <li>1986: 14.6</li>
+    <li>1987: 14.9</li>
+    <li>1988: 13.7</li>
+    <li>1989: 12.7</li>
+    <li>1990: 14.5</li>
+    <li>1991: 15.5</li>
+    <li>1992: 16.5</li>
+    <li>1993: 16.1</li>
+    <li>1994: 15.7</li>
+    <li>1995: 15.5</li>
+    <li>1996: 15.2</li>
     <li>1997: </li>
     <li>1998: </li>
-    <li>1999: </li>
-    <li>2000: </li>
-    <li>2001: </li>
-    <li>2002: </li>
-    <li>2003: </li>
-    <li>2004: </li>
-    <li>2005: </li>
-    <li>2006: </li>
-    <li>2007: </li>
-    <li>2008: </li>
-    <li>2009: </li>
-    <li>2010: </li>
-    <li>2011: </li>
-    <li>2012: </li>
-    <li>2013: </li>
-    <li>2014: </li>
-    <li>2015: </li>
-    <li>2016: </li>
-    <li>2017: </li>
-    <li>2018: </li>
-    <li>2019: </li>
+    <li>1999: 15.5</li>
+    <li>2000: 15.8</li>
+    <li>2001: 15.7</li>
+    <li>2002: 15.8</li>
+    <li>2003: 15.4</li>
+    <li>2004: 15.9</li>
+    <li>2005: 15.8</li>
+    <li>2006: 15.1</li>
+    <li>2007: 13.7</li>
+    <li>2008: 14.7</li>
+    <li>2009: 16.7</li>
+    <li>2010: 16.3</li>
+    <li>2011: 15.6</li>
+    <li>2012: 16.2</li>
+    <li>2013: 15.8</li>
+    <li>2014: 15.1</li>
+    <li>2015: 13.7</li>
+    <li>2016: 11.9</li>
+    <li>2017: 13.4</li>
+    <li>2018: 11.3</li>
+    <li>2019: 11.6</li>
     <li>2020: </li>
-    <li>Historical Background: </li>
-    <li>Total suicide deaths throughout 1960-2020 in this country: </li>
-    <li>Macro Average across all countries during 1960-2020: [object Object]</li>
-    <li>Qualitative comparison between Macro Average and total suicides in this country: </li>
+    <li>Historical Background: https://www.ducksters.com/geography/country/poland_history_timeline.php. The fluctuating rate of suicide rates may be due to these events: 1956 - Protests and riots against Soviet rule occur in Poznan. Some reforms are granted. 1970 - People in Gdansk protest the price of bread. 55 protesters are killed in what is known as &#34;Bloody Tuesday.&#34; 1978 - Karol Wojtyla is elected pope of the Catholic church. He becomes Pope John Paul II. 1982 - Lech Walesa wins the Nobel Peace Prize. 1992 - The Soviet Union begins removing troops from Poland. 2004 - Poland becomes a member of the European Union</li>
+    <li>Total suicide deaths throughout 1960-2020 in this country: 738</li>
+    <li>Macro Average across all countries during 1960-2020: 622</li>
+    <li>Qualitative comparison between Macro Average and total suicides in this country: The total suicides in this counrty is greater than the average among all countries included from 1960 until 2020.</li>
   </ul>
   </section>
 
