--- a/public/PRT.html
+++ b/public/PRT.html
@@ -133,81 +133,81 @@
     <h1>PRT</h1>
     <div id='plotly2'></div>
     <script>
-        var data = [{
+        var stats = [{
         x: [1960, 1961, 1962,1963,1964,1965,1966,1967,1968,1969,1970,1971,1972,1973,1974,1975,1976,1977,1978,1980,1981,1982,1983,1984,1985,1986,1987,1988,1989,1990,1991,1992,1993,1994,1995,1996,1997,1998,1999,2000,2001,2002,2003,2004,2005,2006,2007,2008,2009,2010,2011,2012,2013,2014,2015,2016,2017,2018,2019,2020],
-        y: [, , ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,],
+        y: [12.2, 12.3, 11.6,13,13.2,13.2,13.2,13.5,12.9,12.4,11.1,11.5,11,11.3,11.2,10.9,11.5,11.6,12.1,12.5,9.4,9.6,10,11.3,12,11.6,11.1,11.1,9.4,8.5,9.7,10.5,9.6,8.5,8.2,8.6,7,6.5,5.7,5.5,5.2,7.4,11.7,11.1,,,,9.3,9.4,9.2,9.7,8.9,9.3,9.1,10.6,9.7,8.4,9.1,8.5,,],
         type: 'scatter'}];
-        Plotly.newPlot('plotly2', data);
+        Plotly.newPlot('plotly2', stats);
     </script>
   </header>
   <section id="country-stats">
   <h2>Stats</h2>
   <ul>
-    <li>1960: </li>
-    <li>1961: </li>
-    <li>1962: </li>
-    <li>1963: </li>
-    <li>1964: </li>
-    <li>1965: </li>
-    <li>1966: </li>
-    <li>1967: </li>
-    <li>1968: </li>
-    <li>1969: </li>
-    <li>1970: </li>
-    <li>1971: </li>
-    <li>1972: </li>
-    <li>1973: </li>
-    <li>1974: </li>
-    <li>1975: </li>
-    <li>1976: </li>
-    <li>1977: </li>
-    <li>1978: </li>
-    <li>1979: </li>
-    <li>1980: </li>
-    <li>1981: </li>
-    <li>1982: </li>
-    <li>1983: </li>
-    <li>1984: </li>
-    <li>1985: </li>
-    <li>1986: </li>
-    <li>1987: </li>
-    <li>1988: </li>
-    <li>1989: </li>
-    <li>1990: </li>
-    <li>1991: </li>
-    <li>1992: </li>
-    <li>1993: </li>
-    <li>1994: </li>
-    <li>1995: </li>
-    <li>1996: </li>
-    <li>1997: </li>
-    <li>1998: </li>
-    <li>1999: </li>
-    <li>2000: </li>
-    <li>2001: </li>
-    <li>2002: </li>
-    <li>2003: </li>
+    <li>1960: 12.2</li>
+    <li>1961: 12.3</li>
+    <li>1962: 11.6</li>
+    <li>1963: 13</li>
+    <li>1964: 13.2</li>
+    <li>1965: 13.2</li>
+    <li>1966: 13.2</li>
+    <li>1967: 13.5</li>
+    <li>1968: 12.9</li>
+    <li>1969: 12.4</li>
+    <li>1970: 11.1</li>
+    <li>1971: 11.5</li>
+    <li>1972: 11</li>
+    <li>1973: 11.3</li>
+    <li>1974: 11.2</li>
+    <li>1975: 10.9</li>
+    <li>1976: 11.5</li>
+    <li>1977: 11.6</li>
+    <li>1978: 12.1</li>
+    <li>1979: 12.5</li>
+    <li>1980: 9.4</li>
+    <li>1981: 9.6</li>
+    <li>1982: 10</li>
+    <li>1983: 11.3</li>
+    <li>1984: 12</li>
+    <li>1985: 11.6</li>
+    <li>1986: 11.1</li>
+    <li>1987: 11.1</li>
+    <li>1988: 9.4</li>
+    <li>1989: 8.5</li>
+    <li>1990: 9.7</li>
+    <li>1991: 10.5</li>
+    <li>1992: 9.6</li>
+    <li>1993: 8.5</li>
+    <li>1994: 8.2</li>
+    <li>1995: 8.6</li>
+    <li>1996: 7</li>
+    <li>1997: 6.5</li>
+    <li>1998: 5.7</li>
+    <li>1999: 5.5</li>
+    <li>2000: 5.2</li>
+    <li>2001: 7.4</li>
+    <li>2002: 11.7</li>
+    <li>2003: 11.1</li>
     <li>2004: </li>
     <li>2005: </li>
     <li>2006: </li>
-    <li>2007: </li>
-    <li>2008: </li>
-    <li>2009: </li>
-    <li>2010: </li>
-    <li>2011: </li>
-    <li>2012: </li>
-    <li>2013: </li>
-    <li>2014: </li>
-    <li>2015: </li>
-    <li>2016: </li>
-    <li>2017: </li>
-    <li>2018: </li>
+    <li>2007: 9.3</li>
+    <li>2008: 9.4</li>
+    <li>2009: 9.2</li>
+    <li>2010: 9.7</li>
+    <li>2011: 8.9</li>
+    <li>2012: 9.3</li>
+    <li>2013: 9.1</li>
+    <li>2014: 10.6</li>
+    <li>2015: 9.7</li>
+    <li>2016: 8.4</li>
+    <li>2017: 11.1</li>
+    <li>2018: 8.5</li>
     <li>2019: </li>
     <li>2020: </li>
-    <li>Historical Background: </li>
-    <li>Total suicide deaths throughout 1960-2020 in this country: </li>
-    <li>Macro Average across all countries during 1960-2020: [object Object]</li>
-    <li>Qualitative comparison between Macro Average and total suicides in this country: </li>
+    <li>Historical Background: https://www.bbc.com/news/world-europe-17761153. The fluctuating rate of suicide rates may be due to these events: 1961 - India annexes Portuguese Goa. Rebellion breaks out. 1974 - Caetano government overthrown by a group of army officers. General Antonio Ribeiro de Spinola becomes president. 1982 - Military Council of the Revolution abolished. 2003 - Government declares a national calamity as forest fires sweep across vast areas of woodland. Officials say an area the size of Luxembourg has been lost to the fires. At least 18 people are killed; damage is estimated at one billion euros. 2010 - Tens of thousands of civil servants hold one-day strike in protest against plans to freeze public sector workers&#39; pay</li>
+    <li>Total suicide deaths throughout 1960-2020 in this country: 551</li>
+    <li>Macro Average across all countries during 1960-2020: 622</li>
+    <li>Qualitative comparison between Macro Average and total suicides in this country: The total suicides in this counrty is lesser than the average among all countries included from 1960 until 2020.</li>
   </ul>
   </section>
 
