--- a/public/RUS.html
+++ b/public/RUS.html
@@ -133,11 +133,11 @@
     <h1>RUS</h1>
     <div id='plotly2'></div>
     <script>
-        var data = [{
+        var stats = [{
         x: [1960, 1961, 1962,1963,1964,1965,1966,1967,1968,1969,1970,1971,1972,1973,1974,1975,1976,1977,1978,1980,1981,1982,1983,1984,1985,1986,1987,1988,1989,1990,1991,1992,1993,1994,1995,1996,1997,1998,1999,2000,2001,2002,2003,2004,2005,2006,2007,2008,2009,2010,2011,2012,2013,2014,2015,2016,2017,2018,2019,2020],
-        y: [, , ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,],
+        y: [, , ,,,,,,,,,,,,,,,,,,37.7,37.4,37.8,,34.4,,26.2,26.5,27.7,29,29.6,29.3,33.8,41.2,45.3,44.2,41.7,39.5,37,40.7,40.2,40.2,38.7,36.2,34.3,31.8,29.7,28.4,26.5,25.7,22.8,21.3,20.3,19.6,18.3,17.1,,,,11.7,],
         type: 'scatter'}];
-        Plotly.newPlot('plotly2', data);
+        Plotly.newPlot('plotly2', stats);
     </script>
   </header>
   <section id="country-stats">
@@ -163,51 +163,51 @@
     <li>1977: </li>
     <li>1978: </li>
     <li>1979: </li>
-    <li>1980: </li>
-    <li>1981: </li>
-    <li>1982: </li>
+    <li>1980: 37.7</li>
+    <li>1981: 37.4</li>
+    <li>1982: 37.8</li>
     <li>1983: </li>
-    <li>1984: </li>
+    <li>1984: 34.4</li>
     <li>1985: </li>
-    <li>1986: </li>
-    <li>1987: </li>
-    <li>1988: </li>
-    <li>1989: </li>
-    <li>1990: </li>
-    <li>1991: </li>
-    <li>1992: </li>
-    <li>1993: </li>
-    <li>1994: </li>
-    <li>1995: </li>
-    <li>1996: </li>
-    <li>1997: </li>
-    <li>1998: </li>
-    <li>1999: </li>
-    <li>2000: </li>
-    <li>2001: </li>
-    <li>2002: </li>
-    <li>2003: </li>
-    <li>2004: </li>
-    <li>2005: </li>
-    <li>2006: </li>
-    <li>2007: </li>
-    <li>2008: </li>
-    <li>2009: </li>
-    <li>2010: </li>
-    <li>2011: </li>
-    <li>2012: </li>
-    <li>2013: </li>
-    <li>2014: </li>
-    <li>2015: </li>
+    <li>1986: 26.2</li>
+    <li>1987: 26.5</li>
+    <li>1988: 27.7</li>
+    <li>1989: 29</li>
+    <li>1990: 29.6</li>
+    <li>1991: 29.3</li>
+    <li>1992: 33.8</li>
+    <li>1993: 41.2</li>
+    <li>1994: 45.3</li>
+    <li>1995: 44.2</li>
+    <li>1996: 41.7</li>
+    <li>1997: 39.5</li>
+    <li>1998: 37</li>
+    <li>1999: 40.7</li>
+    <li>2000: 40.2</li>
+    <li>2001: 40.2</li>
+    <li>2002: 38.7</li>
+    <li>2003: 36.2</li>
+    <li>2004: 34.3</li>
+    <li>2005: 31.8</li>
+    <li>2006: 29.7</li>
+    <li>2007: 28.4</li>
+    <li>2008: 26.5</li>
+    <li>2009: 25.7</li>
+    <li>2010: 22.8</li>
+    <li>2011: 21.3</li>
+    <li>2012: 20.3</li>
+    <li>2013: 19.6</li>
+    <li>2014: 18.3</li>
+    <li>2015: 17.1</li>
     <li>2016: </li>
     <li>2017: </li>
     <li>2018: </li>
-    <li>2019: </li>
+    <li>2019: 11.7</li>
     <li>2020: </li>
-    <li>Historical Background: </li>
-    <li>Total suicide deaths throughout 1960-2020 in this country: </li>
-    <li>Macro Average across all countries during 1960-2020: [object Object]</li>
-    <li>Qualitative comparison between Macro Average and total suicides in this country: </li>
+    <li>Historical Background: https://www.ducksters.com/geography/country/russia_history_timeline.php. The fluctuating rate of suicide rates may be due to these events: 1962 - The Cuban Missile Crisis occurs as the Soviets place missiles in Cuba. 1979 - The Soviet-Afghanistan War begins. The Soviets have little success against the Afghanistan rebels. They leave in 1989 defeated. 1980 - The 1980 Summer Olympics are held in Moscow. Many countries boycott the games including the United States. 1991 - The Soviet Union is dissolved. Many countries gain their independence. The country of Russia is established</li>
+    <li>Total suicide deaths throughout 1960-2020 in this country: 1086</li>
+    <li>Macro Average across all countries during 1960-2020: 622</li>
+    <li>Qualitative comparison between Macro Average and total suicides in this country: The total suicides in this counrty is greater than the average among all countries included from 1960 until 2020.</li>
   </ul>
   </section>
 
