--- a/public/SVK.html
+++ b/public/SVK.html
@@ -133,11 +133,11 @@
     <h1>SVK</h1>
     <div id='plotly2'></div>
     <script>
-        var data = [{
+        var stats = [{
         x: [1960, 1961, 1962,1963,1964,1965,1966,1967,1968,1969,1970,1971,1972,1973,1974,1975,1976,1977,1978,1980,1981,1982,1983,1984,1985,1986,1987,1988,1989,1990,1991,1992,1993,1994,1995,1996,1997,1998,1999,2000,2001,2002,2003,2004,2005,2006,2007,2008,2009,2010,2011,2012,2013,2014,2015,2016,2017,2018,2019,2020],
-        y: [, , ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,],
+        y: [, , ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,17.2,15.8,14.7,15.5,13.9,13.2,13.4,14,14.6,13.9,14.3,14.6,12.8,12.9,,,11,11.1,11.6,,10.4,11.2,10,,6.9,6.7,7.4,6.6,],
         type: 'scatter'}];
-        Plotly.newPlot('plotly2', data);
+        Plotly.newPlot('plotly2', stats);
     </script>
   </header>
   <section id="country-stats">
@@ -175,39 +175,39 @@
     <li>1989: </li>
     <li>1990: </li>
     <li>1991: </li>
-    <li>1992: </li>
-    <li>1993: </li>
-    <li>1994: </li>
-    <li>1995: </li>
-    <li>1996: </li>
-    <li>1997: </li>
-    <li>1998: </li>
-    <li>1999: </li>
-    <li>2000: </li>
-    <li>2001: </li>
-    <li>2002: </li>
-    <li>2003: </li>
-    <li>2004: </li>
-    <li>2005: </li>
+    <li>1992: 17.2</li>
+    <li>1993: 15.8</li>
+    <li>1994: 14.7</li>
+    <li>1995: 15.5</li>
+    <li>1996: 13.9</li>
+    <li>1997: 13.2</li>
+    <li>1998: 13.4</li>
+    <li>1999: 14</li>
+    <li>2000: 14.6</li>
+    <li>2001: 13.9</li>
+    <li>2002: 14.3</li>
+    <li>2003: 14.6</li>
+    <li>2004: 12.8</li>
+    <li>2005: 12.9</li>
     <li>2006: </li>
     <li>2007: </li>
-    <li>2008: </li>
-    <li>2009: </li>
-    <li>2010: </li>
+    <li>2008: 11</li>
+    <li>2009: 11.1</li>
+    <li>2010: 11.6</li>
     <li>2011: </li>
-    <li>2012: </li>
-    <li>2013: </li>
-    <li>2014: </li>
+    <li>2012: 10.4</li>
+    <li>2013: 11.2</li>
+    <li>2014: 10</li>
     <li>2015: </li>
-    <li>2016: </li>
+    <li>2016: 6.9</li>
     <li>2017: </li>
-    <li>2018: </li>
-    <li>2019: </li>
+    <li>2018: 7.4</li>
+    <li>2019: 6.6</li>
     <li>2020: </li>
-    <li>Historical Background: </li>
-    <li>Total suicide deaths throughout 1960-2020 in this country: </li>
-    <li>Macro Average across all countries during 1960-2020: [object Object]</li>
-    <li>Qualitative comparison between Macro Average and total suicides in this country: </li>
+    <li>Historical Background: https://www.bbc.com/news/world-europe-17848213. The fluctuating rate of suicide rates may be due to these events: 1948-89 - Communist rule. 1993 - Independence after Czechoslovakia splits. 2004 - Police and troops brought in to end rioting by Romany population protesting against cuts in benefits in parts of eastern Slovakia. 2018 - Investigative journalist Jan Kuciak and his partner Martina Kusnirova are shot dead. He had reported on an alleged tax fraud linked to the interior minister</li>
+    <li>Total suicide deaths throughout 1960-2020 in this country: 282</li>
+    <li>Macro Average across all countries during 1960-2020: 622</li>
+    <li>Qualitative comparison between Macro Average and total suicides in this country: The total suicides in this counrty is lesser than the average among all countries included from 1960 until 2020.</li>
   </ul>
   </section>
 
