--- a/public/SVN.html
+++ b/public/SVN.html
@@ -133,11 +133,11 @@
     <h1>SVN</h1>
     <div id='plotly2'></div>
     <script>
-        var data = [{
+        var stats = [{
         x: [1960, 1961, 1962,1963,1964,1965,1966,1967,1968,1969,1970,1971,1972,1973,1974,1975,1976,1977,1978,1980,1981,1982,1983,1984,1985,1986,1987,1988,1989,1990,1991,1992,1993,1994,1995,1996,1997,1998,1999,2000,2001,2002,2003,2004,2005,2006,2007,2008,2009,2010,2011,2012,2013,2014,2015,2016,2017,2018,2019,2020],
-        y: [, , ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,],
+        y: [, , ,,,,,,,,,,,,,,,,,,,,,,36.7,,33.8,35.2,35.7,38,31,35.5,32.1,33.1,33,29.9,32.2,30.8,31.7,30.7,30.4,29.6,27,28,24.8,24.4,25.6,20.7,19.2,20.8,19.2,20.1,20.1,20.3,17.5,18.9,16.8,18.1,15.7,17.2,15.7],
         type: 'scatter'}];
-        Plotly.newPlot('plotly2', data);
+        Plotly.newPlot('plotly2', stats);
     </script>
   </header>
   <section id="country-stats">
@@ -167,47 +167,47 @@
     <li>1981: </li>
     <li>1982: </li>
     <li>1983: </li>
-    <li>1984: </li>
+    <li>1984: 36.7</li>
     <li>1985: </li>
-    <li>1986: </li>
-    <li>1987: </li>
-    <li>1988: </li>
-    <li>1989: </li>
-    <li>1990: </li>
-    <li>1991: </li>
-    <li>1992: </li>
-    <li>1993: </li>
-    <li>1994: </li>
-    <li>1995: </li>
-    <li>1996: </li>
-    <li>1997: </li>
-    <li>1998: </li>
-    <li>1999: </li>
-    <li>2000: </li>
-    <li>2001: </li>
-    <li>2002: </li>
-    <li>2003: </li>
-    <li>2004: </li>
-    <li>2005: </li>
-    <li>2006: </li>
-    <li>2007: </li>
-    <li>2008: </li>
-    <li>2009: </li>
-    <li>2010: </li>
-    <li>2011: </li>
-    <li>2012: </li>
-    <li>2013: </li>
-    <li>2014: </li>
-    <li>2015: </li>
-    <li>2016: </li>
+    <li>1986: 33.8</li>
+    <li>1987: 35.2</li>
+    <li>1988: 35.7</li>
+    <li>1989: 38</li>
+    <li>1990: 31</li>
+    <li>1991: 35.5</li>
+    <li>1992: 32.1</li>
+    <li>1993: 33.1</li>
+    <li>1994: 33</li>
+    <li>1995: 29.9</li>
+    <li>1996: 32.2</li>
+    <li>1997: 30.8</li>
+    <li>1998: 31.7</li>
+    <li>1999: 30.7</li>
+    <li>2000: 30.4</li>
+    <li>2001: 29.6</li>
+    <li>2002: 27</li>
+    <li>2003: 28</li>
+    <li>2004: 24.8</li>
+    <li>2005: 24.4</li>
+    <li>2006: 25.6</li>
+    <li>2007: 20.7</li>
+    <li>2008: 19.2</li>
+    <li>2009: 20.8</li>
+    <li>2010: 19.2</li>
+    <li>2011: 20.1</li>
+    <li>2012: 20.1</li>
+    <li>2013: 20.3</li>
+    <li>2014: 17.5</li>
+    <li>2015: 18.9</li>
+    <li>2016: 16.8</li>
     <li>2017: </li>
-    <li>2018: </li>
-    <li>2019: </li>
-    <li>2020: </li>
-    <li>Historical Background: </li>
-    <li>Total suicide deaths throughout 1960-2020 in this country: </li>
-    <li>Macro Average across all countries during 1960-2020: [object Object]</li>
-    <li>Qualitative comparison between Macro Average and total suicides in this country: </li>
+    <li>2018: 15.7</li>
+    <li>2019: 17.2</li>
+    <li>2020: 15.7</li>
+    <li>Historical Background: https://www.bbc.com/news/world-europe-17847681. The fluctuating rate of suicide rates may be due to these events: 1945 - Slovenia becomes a constituent republic of socialist Yugoslavia. 1991 - Slovenia declares its independence. The Yugoslav federal army intervenes. Slovene forces defend the country. The EU brokers a ceasefire and the Yugoslav army withdraws. 2004 - Slovenia is one of 10 new states to join the EU. 2012 - Thousands of people take part in anti-austerity protests in Ljubljana and Maribor</li>
+    <li>Total suicide deaths throughout 1960-2020 in this country: 934</li>
+    <li>Macro Average across all countries during 1960-2020: 622</li>
+    <li>Qualitative comparison between Macro Average and total suicides in this country: The total suicides in this counrty is greater than the average among all countries included from 1960 until 2020.</li>
   </ul>
   </section>
 
