--- a/public/SWE.html
+++ b/public/SWE.html
@@ -133,81 +133,81 @@
     <h1>SWE</h1>
     <div id='plotly2'></div>
     <script>
-        var data = [{
+        var stats = [{
         x: [1960, 1961, 1962,1963,1964,1965,1966,1967,1968,1969,1970,1971,1972,1973,1974,1975,1976,1977,1978,1980,1981,1982,1983,1984,1985,1986,1987,1988,1989,1990,1991,1992,1993,1994,1995,1996,1997,1998,1999,2000,2001,2002,2003,2004,2005,2006,2007,2008,2009,2010,2011,2012,2013,2014,2015,2016,2017,2018,2019,2020],
-        y: [, , ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,],
+        y: [19, 18.4, 19.8,19.7,21.3,20.2,21.4,23,22.9,23.4,23.7,21.7,21.6,22,21.2,20.6,19.9,20.8,20.1,21.6,20.5,18.4,20.3,19.7,20.1,18.6,18.9,18.7,19.2,18.9,17.4,17.5,15.9,16,15.2,15.5,14.3,13.7,14,13.9,12.7,13.4,13.2,12.3,12.8,13.4,13,12.2,12.5,13.2,12,11.6,11.9,12.6,11.7,12,11.3,11.7,12.4,,],
         type: 'scatter'}];
-        Plotly.newPlot('plotly2', data);
+        Plotly.newPlot('plotly2', stats);
     </script>
   </header>
   <section id="country-stats">
   <h2>Stats</h2>
   <ul>
-    <li>1960: </li>
-    <li>1961: </li>
-    <li>1962: </li>
-    <li>1963: </li>
-    <li>1964: </li>
-    <li>1965: </li>
-    <li>1966: </li>
-    <li>1967: </li>
-    <li>1968: </li>
-    <li>1969: </li>
-    <li>1970: </li>
-    <li>1971: </li>
-    <li>1972: </li>
-    <li>1973: </li>
-    <li>1974: </li>
-    <li>1975: </li>
-    <li>1976: </li>
-    <li>1977: </li>
-    <li>1978: </li>
-    <li>1979: </li>
-    <li>1980: </li>
-    <li>1981: </li>
-    <li>1982: </li>
-    <li>1983: </li>
-    <li>1984: </li>
-    <li>1985: </li>
-    <li>1986: </li>
-    <li>1987: </li>
-    <li>1988: </li>
-    <li>1989: </li>
-    <li>1990: </li>
-    <li>1991: </li>
-    <li>1992: </li>
-    <li>1993: </li>
-    <li>1994: </li>
-    <li>1995: </li>
-    <li>1996: </li>
-    <li>1997: </li>
-    <li>1998: </li>
-    <li>1999: </li>
-    <li>2000: </li>
-    <li>2001: </li>
-    <li>2002: </li>
-    <li>2003: </li>
-    <li>2004: </li>
-    <li>2005: </li>
-    <li>2006: </li>
-    <li>2007: </li>
-    <li>2008: </li>
-    <li>2009: </li>
-    <li>2010: </li>
-    <li>2011: </li>
-    <li>2012: </li>
-    <li>2013: </li>
-    <li>2014: </li>
-    <li>2015: </li>
-    <li>2016: </li>
-    <li>2017: </li>
-    <li>2018: </li>
+    <li>1960: 19</li>
+    <li>1961: 18.4</li>
+    <li>1962: 19.8</li>
+    <li>1963: 19.7</li>
+    <li>1964: 21.3</li>
+    <li>1965: 20.2</li>
+    <li>1966: 21.4</li>
+    <li>1967: 23</li>
+    <li>1968: 22.9</li>
+    <li>1969: 23.4</li>
+    <li>1970: 23.7</li>
+    <li>1971: 21.7</li>
+    <li>1972: 21.6</li>
+    <li>1973: 22</li>
+    <li>1974: 21.2</li>
+    <li>1975: 20.6</li>
+    <li>1976: 19.9</li>
+    <li>1977: 20.8</li>
+    <li>1978: 20.1</li>
+    <li>1979: 21.6</li>
+    <li>1980: 20.5</li>
+    <li>1981: 18.4</li>
+    <li>1982: 20.3</li>
+    <li>1983: 19.7</li>
+    <li>1984: 20.1</li>
+    <li>1985: 18.6</li>
+    <li>1986: 18.9</li>
+    <li>1987: 18.7</li>
+    <li>1988: 19.2</li>
+    <li>1989: 18.9</li>
+    <li>1990: 17.4</li>
+    <li>1991: 17.5</li>
+    <li>1992: 15.9</li>
+    <li>1993: 16</li>
+    <li>1994: 15.2</li>
+    <li>1995: 15.5</li>
+    <li>1996: 14.3</li>
+    <li>1997: 13.7</li>
+    <li>1998: 14</li>
+    <li>1999: 13.9</li>
+    <li>2000: 12.7</li>
+    <li>2001: 13.4</li>
+    <li>2002: 13.2</li>
+    <li>2003: 12.3</li>
+    <li>2004: 12.8</li>
+    <li>2005: 13.4</li>
+    <li>2006: 13</li>
+    <li>2007: 12.2</li>
+    <li>2008: 12.5</li>
+    <li>2009: 13.2</li>
+    <li>2010: 12</li>
+    <li>2011: 11.6</li>
+    <li>2012: 11.9</li>
+    <li>2013: 12.6</li>
+    <li>2014: 11.7</li>
+    <li>2015: 12</li>
+    <li>2016: 11.3</li>
+    <li>2017: 23.7</li>
+    <li>2018: 12.4</li>
     <li>2019: </li>
     <li>2020: </li>
-    <li>Historical Background: </li>
-    <li>Total suicide deaths throughout 1960-2020 in this country: </li>
-    <li>Macro Average across all countries during 1960-2020: [object Object]</li>
-    <li>Qualitative comparison between Macro Average and total suicides in this country: </li>
+    <li>Historical Background: https://www.ducksters.com/geography/country/sweden_history_timeline.php. The fluctuating rate of suicide rates may be due to these events: 1975 - The last remaining governmental powers of the Swedish king and queen are removed by a new constitution. 1986 - The Prime Minister of Sweden is assassinated. The crime is surrounded with mystery and remains unsolved. 1995 - Sweden joins the European Union. 2000 - The Oresund Bridge opens between Malmo and Denmark</li>
+    <li>Total suicide deaths throughout 1960-2020 in this country: 978</li>
+    <li>Macro Average across all countries during 1960-2020: 622</li>
+    <li>Qualitative comparison between Macro Average and total suicides in this country: The total suicides in this counrty is greater than the average among all countries included from 1960 until 2020.</li>
   </ul>
   </section>
 
