--- a/public/TUR.html
+++ b/public/TUR.html
@@ -133,11 +133,11 @@
     <h1>TUR</h1>
     <div id='plotly2'></div>
     <script>
-        var data = [{
+        var stats = [{
         x: [1960, 1961, 1962,1963,1964,1965,1966,1967,1968,1969,1970,1971,1972,1973,1974,1975,1976,1977,1978,1980,1981,1982,1983,1984,1985,1986,1987,1988,1989,1990,1991,1992,1993,1994,1995,1996,1997,1998,1999,2000,2001,2002,2003,2004,2005,2006,2007,2008,2009,2010,2011,2012,2013,2014,2015,2016,2017,2018,2019,2020],
-        y: [, , ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,],
+        y: [, , ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,2.4,1.8,2.2,2.7,2.3,2.2,2.6,,,4.4,],
         type: 'scatter'}];
-        Plotly.newPlot('plotly2', data);
+        Plotly.newPlot('plotly2', stats);
     </script>
   </header>
   <section id="country-stats">
@@ -193,21 +193,21 @@
     <li>2007: </li>
     <li>2008: </li>
     <li>2009: </li>
-    <li>2010: </li>
-    <li>2011: </li>
-    <li>2012: </li>
-    <li>2013: </li>
-    <li>2014: </li>
-    <li>2015: </li>
-    <li>2016: </li>
+    <li>2010: 2.4</li>
+    <li>2011: 1.8</li>
+    <li>2012: 2.2</li>
+    <li>2013: 2.7</li>
+    <li>2014: 2.3</li>
+    <li>2015: 2.2</li>
+    <li>2016: 2.6</li>
     <li>2017: </li>
     <li>2018: </li>
-    <li>2019: </li>
+    <li>2019: 4.4</li>
     <li>2020: </li>
-    <li>Historical Background: </li>
-    <li>Total suicide deaths throughout 1960-2020 in this country: </li>
-    <li>Macro Average across all countries during 1960-2020: [object Object]</li>
-    <li>Qualitative comparison between Macro Average and total suicides in this country: </li>
+    <li>Historical Background: https://www.ducksters.com/geography/country/turkey_history_timeline.php. The fluctuating rate of suicide rates may be due to these events: 1960 - The army stages a coup of the government. 1974 - Turkey invades Cyprus. 1980 - Another coup takes place and martial law is established for a period. 1999 - A 7.4 magnitude earthquake kills around 17000 people. 2005 - Turkey begins negotiations in an effort to join the European Union</li>
+    <li>Total suicide deaths throughout 1960-2020 in this country: 17</li>
+    <li>Macro Average across all countries during 1960-2020: 622</li>
+    <li>Qualitative comparison between Macro Average and total suicides in this country: The total suicides in this counrty is lesser than the average among all countries included from 1960 until 2020.</li>
   </ul>
   </section>
 
