--- a/public/USA.html
+++ b/public/USA.html
@@ -133,81 +133,81 @@
     <h1>USA</h1>
     <div id='plotly2'></div>
     <script>
-        var data = [{
+        var stats = [{
         x: [1960, 1961, 1962,1963,1964,1965,1966,1967,1968,1969,1970,1971,1972,1973,1974,1975,1976,1977,1978,1980,1981,1982,1983,1984,1985,1986,1987,1988,1989,1990,1991,1992,1993,1994,1995,1996,1997,1998,1999,2000,2001,2002,2003,2004,2005,2006,2007,2008,2009,2010,2011,2012,2013,2014,2015,2016,2017,2018,2019,2020],
-        y: [, , ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,],
+        y: [13.9, 13.6, 14.2,14.3,14,14.4,14.1,13.7,13.5,13.9,14.3,14.3,14.5,14.2,14.2,14.5,14.2,14.6,13.8,13.4,12.9,13.1,13.3,13.3,13.4,13.3,13.9,13.7,13.3,13.1,13.3,13.1,12.8,12.9,12.7,12.6,12.3,12.1,11.9,11.3,11,11.3,11.5,11.3,11.5,11.4,11.5,11.9,12.2,12.4,12.8,13,13.2,13.4,13.8,14,14.2,14.8,15,14.7,14.1],
         type: 'scatter'}];
-        Plotly.newPlot('plotly2', data);
+        Plotly.newPlot('plotly2', stats);
     </script>
   </header>
   <section id="country-stats">
   <h2>Stats</h2>
   <ul>
-    <li>1960: </li>
-    <li>1961: </li>
-    <li>1962: </li>
-    <li>1963: </li>
-    <li>1964: </li>
-    <li>1965: </li>
-    <li>1966: </li>
-    <li>1967: </li>
-    <li>1968: </li>
-    <li>1969: </li>
-    <li>1970: </li>
-    <li>1971: </li>
-    <li>1972: </li>
-    <li>1973: </li>
-    <li>1974: </li>
-    <li>1975: </li>
-    <li>1976: </li>
-    <li>1977: </li>
-    <li>1978: </li>
-    <li>1979: </li>
-    <li>1980: </li>
-    <li>1981: </li>
-    <li>1982: </li>
-    <li>1983: </li>
-    <li>1984: </li>
-    <li>1985: </li>
-    <li>1986: </li>
-    <li>1987: </li>
-    <li>1988: </li>
-    <li>1989: </li>
-    <li>1990: </li>
-    <li>1991: </li>
-    <li>1992: </li>
-    <li>1993: </li>
-    <li>1994: </li>
-    <li>1995: </li>
-    <li>1996: </li>
-    <li>1997: </li>
-    <li>1998: </li>
-    <li>1999: </li>
-    <li>2000: </li>
-    <li>2001: </li>
-    <li>2002: </li>
-    <li>2003: </li>
-    <li>2004: </li>
-    <li>2005: </li>
-    <li>2006: </li>
-    <li>2007: </li>
-    <li>2008: </li>
-    <li>2009: </li>
-    <li>2010: </li>
-    <li>2011: </li>
-    <li>2012: </li>
-    <li>2013: </li>
-    <li>2014: </li>
-    <li>2015: </li>
-    <li>2016: </li>
-    <li>2017: </li>
-    <li>2018: </li>
-    <li>2019: </li>
-    <li>2020: </li>
-    <li>Historical Background: </li>
-    <li>Total suicide deaths throughout 1960-2020 in this country: </li>
-    <li>Macro Average across all countries during 1960-2020: [object Object]</li>
-    <li>Qualitative comparison between Macro Average and total suicides in this country: </li>
+    <li>1960: 13.9</li>
+    <li>1961: 13.6</li>
+    <li>1962: 14.2</li>
+    <li>1963: 14.3</li>
+    <li>1964: 14</li>
+    <li>1965: 14.4</li>
+    <li>1966: 14.1</li>
+    <li>1967: 13.7</li>
+    <li>1968: 13.5</li>
+    <li>1969: 13.9</li>
+    <li>1970: 14.3</li>
+    <li>1971: 14.3</li>
+    <li>1972: 14.5</li>
+    <li>1973: 14.2</li>
+    <li>1974: 14.2</li>
+    <li>1975: 14.5</li>
+    <li>1976: 14.2</li>
+    <li>1977: 14.6</li>
+    <li>1978: 13.8</li>
+    <li>1979: 13.4</li>
+    <li>1980: 12.9</li>
+    <li>1981: 13.1</li>
+    <li>1982: 13.3</li>
+    <li>1983: 13.3</li>
+    <li>1984: 13.4</li>
+    <li>1985: 13.3</li>
+    <li>1986: 13.9</li>
+    <li>1987: 13.7</li>
+    <li>1988: 13.3</li>
+    <li>1989: 13.1</li>
+    <li>1990: 13.3</li>
+    <li>1991: 13.1</li>
+    <li>1992: 12.8</li>
+    <li>1993: 12.9</li>
+    <li>1994: 12.7</li>
+    <li>1995: 12.6</li>
+    <li>1996: 12.3</li>
+    <li>1997: 12.1</li>
+    <li>1998: 11.9</li>
+    <li>1999: 11.3</li>
+    <li>2000: 11</li>
+    <li>2001: 11.3</li>
+    <li>2002: 11.5</li>
+    <li>2003: 11.3</li>
+    <li>2004: 11.5</li>
+    <li>2005: 11.4</li>
+    <li>2006: 11.5</li>
+    <li>2007: 11.9</li>
+    <li>2008: 12.2</li>
+    <li>2009: 12.4</li>
+    <li>2010: 12.8</li>
+    <li>2011: 13</li>
+    <li>2012: 13.2</li>
+    <li>2013: 13.4</li>
+    <li>2014: 13.8</li>
+    <li>2015: 14</li>
+    <li>2016: 14.2</li>
+    <li>2017: 14.3</li>
+    <li>2018: 15</li>
+    <li>2019: 14.7</li>
+    <li>2020: 14.1</li>
+    <li>Historical Background: https://www.ducksters.com/geography/country/united_states_history_timeline.php. The fluctuating rate of suicide rates may be due to these events: 1963 - President John F. Kennedy is assassinated. 1968 - Martin Luther King Jr. is assassinated. 2001 - The 9-11 terrorist attacks occur when hijacked passenger planes crash into the World Trade Center towers and The Pentagon. 2003 - The Iraq War begins as the U.S. and other countries invade Iraq</li>
+    <li>Total suicide deaths throughout 1960-2020 in this country: 783</li>
+    <li>Macro Average across all countries during 1960-2020: 622</li>
+    <li>Qualitative comparison between Macro Average and total suicides in this country: The total suicides in this counrty is greater than the average among all countries included from 1960 until 2020.</li>
   </ul>
   </section>
 
